doc(1_BasciOperation): update content

--- a/Notebooks/1_Math/1_BasciOperation/1362_ClosestDivisors.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/1362_ClosestDivisors.ipynb
@@ -2,60 +2,116 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "81d52711-4209-4609-84c5-e67141537ff1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include <iostream>\n",
-    "#include <vector>\n",
-    "#include <cmath>\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
    "metadata": {},
    "source": [
     "Solution:\n",
     "\n",
     "---\n",
-    "- Name Solution: Closest Divisors\n",
+    "- Problem: Closest Divisors\n",
     "- Idea:\n",
-    "    - To find two divisors of either (x + 1) or (x + 2) whose difference is minimized,\n",
-    "    - start checking from sqrt(x + 2) downward. Factors closer to the square root will\n",
-    "    - naturally have a smaller difference. Return the first valid pair found.\n",
-    "- Time: O(sqrt(N)), since we iterate down from sqrt(x + 2)\n",
-    "- Space: O(1), only constant extra space used\n",
+    "    - Given an integer x, find two integers a and b such that:\n",
+    "      * a * b = x + 1 OR a * b = x + 2\n",
+    "      * |a - b| is minimized\n",
+    "    - Approach 1 (Optimized sqrt downward):\n",
+    "        - Start from sqrt(x + 2) and iterate downward\n",
+    "        - Check divisibility for both (x + 1) and (x + 2)\n",
+    "        - Return the first valid pair found (guaranteed to have minimum difference)\n",
+    "    - Approach 2 (Check x+1 first, then x+2):\n",
+    "        - Find closest divisors for (x + 1) starting from sqrt(x + 1)\n",
+    "        - Find closest divisors for (x + 2) starting from sqrt(x + 2)\n",
+    "        - Compare the differences and return the pair with smaller difference\n",
+    "    - Approach 3 (Optimized with early termination):\n",
+    "        - Similar to Approach 1 but with better variable naming and logic clarity\n",
+    "        - Uses a helper function to find divisors for a given number\n",
+    "        - Compares results for both (x + 1) and (x + 2)\n",
+    "- Time:\n",
+    "    + Approach 1: O(sqrt(x)) — iterate from sqrt(x + 2) downward\n",
+    "    + Approach 2: O(sqrt(x)) — check both x+1 and x+2 separately\n",
+    "    + Approach 3: O(sqrt(x)) — similar to Approach 1 with helper function\n",
+    "- Space:\n",
+    "    + All approaches: O(1) — only constant extra space used\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a9feacf2-0132-4fd5-959b-1764dc726f1b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "#include <cmath>\n",
+    "#include <climits>\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
-    "public:\n",
-    "    vector<int> closestDivisors(int x) {\n",
+    "public:   \n",
+    "    // ---------- Approach 1: Optimized sqrt downward ----------\n",
+    "    vector<int> closestDivisors_V1(int x) {\n",
+    "        // Start from sqrt(x + 2) since it's the larger candidate\n",
+    "        // This ensures we check the most promising divisors first\n",
     "        for (int a = sqrt(x + 2); a > 0; --a) {\n",
     "            if ((x + 1) % a == 0)\n",
     "                return {a, (x + 1) / a};\n",
     "            if ((x + 2) % a == 0)\n",
     "                return {a, (x + 2) / a};\n",
     "        }\n",
-    "        return {};\n",
+    "        return {}; // should never reach here\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Helper function for Approach 2 & 3 ----------\n",
+    "    vector<int> findClosestDivisorsForNumber(int num) {\n",
+    "        // Find the pair of divisors closest to sqrt(num)\n",
+    "        for (int a = sqrt(num); a > 0; --a) {\n",
+    "            if (num % a == 0) {\n",
+    "                return {a, num / a};\n",
+    "            }\n",
+    "        }\n",
+    "        return {1, num}; // fallback (every number is divisible by 1)\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 2: Check x+1 first, then x+2 ----------\n",
+    "    vector<int> closestDivisors_V2(int x) {\n",
+    "        // Find closest divisors for (x + 1)\n",
+    "        vector<int> pair1 = findClosestDivisorsForNumber(x + 1);\n",
+    "        int diff1 = abs(pair1[1] - pair1[0]);\n",
+    "        \n",
+    "        // Find closest divisors for (x + 2)\n",
+    "        vector<int> pair2 = findClosestDivisorsForNumber(x + 2);\n",
+    "        int diff2 = abs(pair2[1] - pair2[0]);\n",
+    "        \n",
+    "        // Return the pair with smaller difference\n",
+    "        return (diff1 <= diff2) ? pair1 : pair2;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 3: Optimized with clear logic ----------\n",
+    "    vector<int> closestDivisors_V3(int x) {\n",
+    "        vector<int> result;\n",
+    "        int minDiff = INT_MAX;\n",
+    "        \n",
+    "        // Check both (x + 1) and (x + 2)\n",
+    "        for (int candidate : {x + 1, x + 2}) {\n",
+    "            // Start from sqrt and go downward\n",
+    "            int sqrtVal = sqrt(candidate);\n",
+    "            for (int a = sqrtVal; a > 0; --a) {\n",
+    "                if (candidate % a == 0) {\n",
+    "                    int b = candidate / a;\n",
+    "                    int diff = abs(b - a);\n",
+    "                    \n",
+    "                    // Update result if this pair has smaller difference\n",
+    "                    if (diff < minDiff) {\n",
+    "                        minDiff = diff;\n",
+    "                        result = {a, b};\n",
+    "                    }\n",
+    "                    break; // Found closest divisors for this candidate\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        \n",
+    "        return result;\n",
     "    }\n",
     "};"
    ]
@@ -70,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "98c49c0a-3800-4d29-81f2-4922fc024e6a",
    "metadata": {},
    "outputs": [
@@ -78,29 +134,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x = 8 -> Closest divisors: 3, 3\n",
-      "-------------------------\n",
-      "x = 123 -> Closest divisors: 5, 25\n",
-      "-------------------------\n",
-      "x = 999 -> Closest divisors: 25, 40\n",
-      "-------------------------\n"
+      "=====================================\n",
+      "Test case x = 8\n",
+      "=====================================\n",
+      "Approach 1 (Optimized): [3, 3] | Product: 9 | Diff: 0 | Valid: ✓\n",
+      "Approach 2 (Separate):  [3, 3] | Product: 9 | Diff: 0 | Valid: ✓\n",
+      "Approach 3 (Clear):     [3, 3] | Product: 9 | Diff: 0 | Valid: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case x = 123\n",
+      "=====================================\n",
+      "Approach 1 (Optimized): [5, 25] | Product: 125 | Diff: 20 | Valid: ✓\n",
+      "Approach 2 (Separate):  [5, 25] | Product: 125 | Diff: 20 | Valid: ✓\n",
+      "Approach 3 (Clear):     [5, 25] | Product: 125 | Diff: 20 | Valid: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case x = 999\n",
+      "=====================================\n",
+      "Approach 1 (Optimized): [25, 40] | Product: 1000 | Diff: 15 | Valid: ✓\n",
+      "Approach 2 (Separate):  [25, 40] | Product: 1000 | Diff: 15 | Valid: ✓\n",
+      "Approach 3 (Clear):     [25, 40] | Product: 1000 | Diff: 15 | Valid: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case x = 1\n",
+      "=====================================\n",
+      "Approach 1 (Optimized): [1, 2] | Product: 2 | Diff: 1 | Valid: ✓\n",
+      "Approach 2 (Separate):  [1, 2] | Product: 2 | Diff: 1 | Valid: ✓\n",
+      "Approach 3 (Clear):     [1, 2] | Product: 2 | Diff: 1 | Valid: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case x = 5\n",
+      "=====================================\n",
+      "Approach 1 (Optimized): [2, 3] | Product: 6 | Diff: 1 | Valid: ✓\n",
+      "Approach 2 (Separate):  [2, 3] | Product: 6 | Diff: 1 | Valid: ✓\n",
+      "Approach 3 (Clear):     [2, 3] | Product: 6 | Diff: 1 | Valid: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case x = 1000\n",
+      "=====================================\n",
+      "Approach 1 (Optimized): [13, 77] | Product: 1001 | Diff: 64 | Valid: ✓\n",
+      "Approach 2 (Separate):  [13, 77] | Product: 1001 | Diff: 64 | Valid: ✓\n",
+      "Approach 3 (Clear):     [13, 77] | Product: 1001 | Diff: 64 | Valid: ✓\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "Solution sol;\n",
     "\n",
-    "    // Test cases\n",
-    "    vector<int> testCases = {8, 123, 999};\n",
+    "// Test cases\n",
+    "vector<int> testCases = {8, 123, 999, 1, 5, 1000};\n",
     "\n",
-    "    for (int x : testCases) {\n",
-    "        vector<int> res = sol.closestDivisors(x);\n",
-    "        cout << \"x = \" << x << \" -> Closest divisors: \";\n",
-    "        cout << res[0] << \", \" << res[1] << endl;\n",
-    "        cout << \"-------------------------\" << endl;\n",
+    "for (int x : testCases) {\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    cout << \"Test case x = \" << x << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    \n",
+    "    // Approach 1\n",
+    "    vector<int> res1 = sol.closestDivisors_V1(x);\n",
+    "    if (!res1.empty()) {\n",
+    "        int product = res1[0] * res1[1];\n",
+    "        int diff = abs(res1[1] - res1[0]);\n",
+    "        cout << \"Approach 1 (Optimized): [\" << res1[0] << \", \" << res1[1] << \"]\";\n",
+    "        cout << \" | Product: \" << product;\n",
+    "        cout << \" | Diff: \" << diff;\n",
+    "        cout << \" | Valid: \" << (product == x + 1 || product == x + 2 ? \"✓\" : \"✗\") << endl;\n",
     "    }\n",
-    "\n",
-    "    return 0;"
+    "    \n",
+    "    // Approach 2\n",
+    "    vector<int> res2 = sol.closestDivisors_V2(x);\n",
+    "    if (!res2.empty()) {\n",
+    "        int product = res2[0] * res2[1];\n",
+    "        int diff = abs(res2[1] - res2[0]);\n",
+    "        cout << \"Approach 2 (Separate):  [\" << res2[0] << \", \" << res2[1] << \"]\";\n",
+    "        cout << \" | Product: \" << product;\n",
+    "        cout << \" | Diff: \" << diff;\n",
+    "        cout << \" | Valid: \" << (product == x + 1 || product == x + 2 ? \"✓\" : \"✗\") << endl;\n",
+    "    }\n",
+    "    \n",
+    "    // Approach 3\n",
+    "    vector<int> res3 = sol.closestDivisors_V3(x);\n",
+    "    if (!res3.empty()) {\n",
+    "        int product = res3[0] * res3[1];\n",
+    "        int diff = abs(res3[1] - res3[0]);\n",
+    "        cout << \"Approach 3 (Clear):     [\" << res3[0] << \", \" << res3[1] << \"]\";\n",
+    "        cout << \" | Product: \" << product;\n",
+    "        cout << \" | Diff: \" << diff;\n",
+    "        cout << \" | Valid: \" << (product == x + 1 || product == x + 2 ? \"✓\" : \"✗\") << endl;\n",
+    "    }\n",
+    "    \n",
+    "    cout << endl;\n",
+    "}"
    ]
   }
  ],
