--- a/Notebooks/1_Math/1_BasciOperation/1523_CountOddNumbersinanIntervalRange.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/1523_CountOddNumbersinanIntervalRange.ipynb
@@ -2,59 +2,49 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "27ee0548-0451-4bd5-a96d-d02fbb8a0c31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include<iostream>\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
    "metadata": {},
    "source": [
     "Solution:\n",
     "\n",
     "---\n",
-    "- Method 1:\n",
-    "    - Solution Name: Using Loop\n",
-    "    - Idea:\n",
-    "       - Iterate from low to high and count each number that is odd using modulo operator.\n",
-    "       - Simple and intuitive approach.\n",
-    "    - Time: O(N), where N = high - low + 1\n",
-    "    - Space: O(1), only a counter is used\n",
-    "---\n",
-    "- Method 2:\n",
-    "    - Solution Name: Using Formula\n",
-    "    - Idea:\n",
-    "       - Count odds using the arithmetic property: number of odds in [0..high] minus number of odds in [0..low-1].\n",
-    "       - Avoids iteration for O(1) solution.\n",
-    "    - Time: O(1), only arithmetic operations\n",
-    "    - Space: O(1), no extra memory needed\n",
+    "- Problem: Count Odd Numbers in an Interval Range\n",
+    "- Idea: Given two non-negative integers low and high, return the count of odd numbers between low and high (inclusive).\n",
+    "    - Approach 1 (Loop-based):\n",
+    "        - Iterate from low to high and count each number that is odd using modulo operator\n",
+    "        - Simple and intuitive approach\n",
+    "    - Approach 2 (Formula-based):\n",
+    "        - Count odds using the arithmetic property: number of odds in [0..high] minus number of odds in [0..low-1]\n",
+    "        - Formula: (high + 1) / 2 - (low / 2)\n",
+    "        - Avoids iteration for O(1) solution\n",
+    "    - Approach 3 (Direct calculation):\n",
+    "        - Calculate total numbers in range\n",
+    "        - Check parity of low and high to determine odd count\n",
+    "        - More intuitive formula: (high - low) / 2 + (low % 2 || high % 2)\n",
+    "- Time:\n",
+    "    + Approach 1: O(N), where N = high - low + 1\n",
+    "    + Approach 2/3: O(1), only arithmetic operations\n",
+    "    + Approach 3: O(1), only arithmetic operations\n",
+    "- Space:\n",
+    "    + Approach 1: O(1), only a counter is used\n",
+    "    + Approach 2/3: O(1), no extra memory needed\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0b3cbec4-8863-46a4-b322-9a8d353300b3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
-    "public:\n",
-    "    // Method 1\n",
+    "public:   \n",
+    "    // ---------- Approach 1: Using Loop ----------\n",
     "    int countOddsLoop(int low, int high) {\n",
     "        int cnt = 0;\n",
     "        for(int i = low; i <= high; i++) {\n",
@@ -64,9 +54,40 @@
     "        return cnt;\n",
     "    }\n",
     "\n",
-    "    // Method 2\n",
+    "    // ---------- Approach 2: Using Formula (Prefix Sum) ----------\n",
     "    int countOddsFormula(int low, int high) {\n",
+    "        // Number of odds in [0..high] minus number of odds in [0..low-1]\n",
     "        return (high + 1) / 2 - (low / 2);\n",
+    "    }\n",
+    "\n",
+    "    // ---------- Approach 3: Direct Calculation ----------\n",
+    "    int countOddsDirect(int low, int high) {\n",
+    "        // Total numbers in range\n",
+    "        int total = high - low + 1;\n",
+    "        \n",
+    "        // If total is even, odds = total / 2 (if low is odd) or total / 2 (if low is even)\n",
+    "        // If total is odd, odds = (total + 1) / 2 (if low is odd) or total / 2 (if low is even)\n",
+    "        \n",
+    "        // Simpler approach: check if low or high is odd\n",
+    "        int odds = (high - low) / 2;\n",
+    "        \n",
+    "        // Add 1 if either low or high is odd\n",
+    "        if (low % 2 != 0 || high % 2 != 0) {\n",
+    "            odds++;\n",
+    "        }\n",
+    "        \n",
+    "        return odds;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Alternative Approach 3: Even more direct ----------\n",
+    "    int countOddsDirectV2(int low, int high) {\n",
+    "        // Count odds based on parity of endpoints\n",
+    "        // If both are even: (high - low) / 2\n",
+    "        // If one is odd: (high - low) / 2 + 1\n",
+    "        // If both are odd: (high - low) / 2 + 1\n",
+    "        \n",
+    "        return (high - low) / 2 + ((low & 1) | (high & 1));\n",
+    "        // Using bitwise AND with 1 to check if odd (faster than %)\n",
     "    }\n",
     "};"
    ]
@@ -81,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "226cf3bd-efcd-4378-a562-32d28604b856",
    "metadata": {},
    "outputs": [
@@ -89,43 +110,133 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=====================================\n",
       "Test case: low = 3, high = 7\n",
-      "Count odds using Loop: 3\n",
-      "Count odds using Formula: 3\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Loop):      3 | Verify: ✓\n",
+      "Approach 2 (Formula):   3 | Verify: ✓\n",
+      "Approach 3 (Direct):    3 | Verify: ✓\n",
+      "Approach 3v2 (Bitwise): 3 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
       "Test case: low = 2, high = 10\n",
-      "Count odds using Loop: 4\n",
-      "Count odds using Formula: 4\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Loop):      4 | Verify: ✓\n",
+      "Approach 2 (Formula):   4 | Verify: ✓\n",
+      "Approach 3 (Direct):    4 | Verify: ✓\n",
+      "Approach 3v2 (Bitwise): 4 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
       "Test case: low = 1, high = 1\n",
-      "Count odds using Loop: 1\n",
-      "Count odds using Formula: 1\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Loop):      1 | Verify: ✓\n",
+      "Approach 2 (Formula):   1 | Verify: ✓\n",
+      "Approach 3 (Direct):    1 | Verify: ✓\n",
+      "Approach 3v2 (Bitwise): 1 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
       "Test case: low = 8, high = 15\n",
-      "Count odds using Loop: 4\n",
-      "Count odds using Formula: 4\n",
-      "-------------------------\n"
+      "=====================================\n",
+      "Approach 1 (Loop):      4 | Verify: ✓\n",
+      "Approach 2 (Formula):   4 | Verify: ✓\n",
+      "Approach 3 (Direct):    4 | Verify: ✓\n",
+      "Approach 3v2 (Bitwise): 4 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case: low = 0, high = 10\n",
+      "=====================================\n",
+      "Approach 1 (Loop):      5 | Verify: ✓\n",
+      "Approach 2 (Formula):   5 | Verify: ✓\n",
+      "Approach 3 (Direct):    5 | Verify: ✓\n",
+      "Approach 3v2 (Bitwise): 5 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case: low = 1, high = 100\n",
+      "=====================================\n",
+      "Approach 1 (Loop):      50 | Verify: ✓\n",
+      "Approach 2 (Formula):   50 | Verify: ✓\n",
+      "Approach 3 (Direct):    50 | Verify: ✓\n",
+      "Approach 3v2 (Bitwise): 50 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case: low = 21, high = 21\n",
+      "=====================================\n",
+      "Approach 1 (Loop):      1 | Verify: ✓\n",
+      "Approach 2 (Formula):   1 | Verify: ✓\n",
+      "Approach 3 (Direct):    1 | Verify: ✓\n",
+      "Approach 3v2 (Bitwise): 1 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case: low = 22, high = 22\n",
+      "=====================================\n",
+      "Approach 1 (Loop):      0 | Verify: ✓\n",
+      "Approach 2 (Formula):   0 | Verify: ✓\n",
+      "Approach 3 (Direct):    0 | Verify: ✓\n",
+      "Approach 3v2 (Bitwise): 0 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Performance Test: low = 1, high = 1000000\n",
+      "=====================================\n",
+      "Note: Approach 1 (Loop) would be very slow for this range!\n",
+      "Approach 2 (Formula):   500000\n",
+      "Approach 3 (Direct):    500000\n",
+      "Approach 3v2 (Bitwise): 500000\n",
+      "All O(1) approaches give instant results!\n"
      ]
     }
    ],
    "source": [
     "Solution sol;\n",
     "\n",
-    "    // Test cases\n",
-    "    pair<int, int> testCases[] = {{3, 7}, {2, 10}, {1, 1}, {8, 15}};\n",
-    "    int size = sizeof(testCases) / sizeof(testCases[0]);\n",
+    "// Test cases\n",
+    "vector<pair<int, int>> testCases = {\n",
+    "    {3, 7},      // 3,5,7 → 3 odds\n",
+    "    {2, 10},     // 3,5,7,9 → 4 odds\n",
+    "    {1, 1},      // 1 → 1 odd\n",
+    "    {8, 15},     // 9,11,13,15 → 4 odds\n",
+    "    {0, 10},     // 1,3,5,7,9 → 5 odds\n",
+    "    {1, 100},    // Large range\n",
+    "    {21, 21},    // Single odd number\n",
+    "    {22, 22}     // Single even number\n",
+    "};\n",
     "\n",
-    "    for(int i = 0; i < size; i++) {\n",
-    "        int low = testCases[i].first;\n",
-    "        int high = testCases[i].second;\n",
+    "for(const auto& test : testCases) {\n",
+    "    int low = test.first;\n",
+    "    int high = test.second;\n",
     "\n",
-    "        cout << \"Test case: low = \" << low << \", high = \" << high << endl;\n",
-    "        cout << \"Count odds using Loop: \" << sol.countOddsLoop(low, high) << endl;\n",
-    "        cout << \"Count odds using Formula: \" << sol.countOddsFormula(low, high) << endl;\n",
-    "        cout << \"-------------------------\" << endl;\n",
-    "    }\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    cout << \"Test case: low = \" << low << \", high = \" << high << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    \n",
+    "    int res1 = sol.countOddsLoop(low, high);\n",
+    "    int res2 = sol.countOddsFormula(low, high);\n",
+    "    int res3 = sol.countOddsDirect(low, high);\n",
+    "    int res4 = sol.countOddsDirectV2(low, high);\n",
+    "    \n",
+    "    cout << \"Approach 1 (Loop):      \" << res1;\n",
+    "    cout << \" | Verify: \" << (res1 == res2 && res1 == res3 ? \"✓\" : \"✗\") << endl;\n",
+    "    \n",
+    "    cout << \"Approach 2 (Formula):   \" << res2;\n",
+    "    cout << \" | Verify: \" << (res2 == res1 && res2 == res3 ? \"✓\" : \"✗\") << endl;\n",
+    "    \n",
+    "    cout << \"Approach 3 (Direct):    \" << res3;\n",
+    "    cout << \" | Verify: \" << (res3 == res1 && res3 == res2 ? \"✓\" : \"✗\") << endl;\n",
+    "    \n",
+    "    cout << \"Approach 3v2 (Bitwise): \" << res4;\n",
+    "    cout << \" | Verify: \" << (res4 == res1 && res4 == res2 ? \"✓\" : \"✗\") << endl;\n",
+    "    \n",
+    "    cout << endl;\n",
+    "}\n",
     "\n",
-    "    return 0;"
+    "// Performance comparison for large range\n",
+    "cout << \"=====================================\" << endl;\n",
+    "cout << \"Performance Test: low = 1, high = 1000000\" << endl;\n",
+    "cout << \"=====================================\" << endl;\n",
+    "cout << \"Note: Approach 1 (Loop) would be very slow for this range!\" << endl;\n",
+    "cout << \"Approach 2 (Formula):   \" << sol.countOddsFormula(1, 1000000) << endl;\n",
+    "cout << \"Approach 3 (Direct):    \" << sol.countOddsDirect(1, 1000000) << endl;\n",
+    "cout << \"Approach 3v2 (Bitwise): \" << sol.countOddsDirectV2(1, 1000000) << endl;\n",
+    "cout << \"All O(1) approaches give instant results!\" << endl;"
    ]
   }
  ],
