--- a/Notebooks/1_Math/1_BasciOperation/1551_MinimumOperationstoMakeArrayEqual.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/1551_MinimumOperationstoMakeArrayEqual.ipynb
@@ -2,73 +2,110 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "f862e46b-951f-476e-86f5-3b959a5aeb9c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include<iostream>\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
    "metadata": {},
    "source": [
     "Solution:\n",
     "\n",
     "---\n",
-    "- Method 1:\n",
-    "  - Solution Name: Using Loop\n",
-    "  - Idea:\n",
-    "      - The array consists of the first n odd numbers [1, 3, 5, ..., 2n-1].\n",
-    "      - To make all elements equal, only the first half of the array needs to be increased to match the target (which is n).\n",
-    "      - Loop through the first half and sum the differences.\n",
-    "  - Time: O(N), loop through n/2 elements\n",
-    "  - Space: O(1), no extra memory used\n",
-    "---\n",
-    "- Method 2:\n",
-    "  - Solution Name: Using Formula\n",
-    "  - Idea:\n",
-    "    - The sum of differences for the first half of the array can be calculated directly using the formula result = n^2 / 4,\n",
-    "    - derived from the arithmetic series of odd numbers. Works for both even and odd n.\n",
-    "  - Time: O(1), computed in a single arithmetic operation\n",
-    "  - Space: O(1), no extra memory used\n",
+    "- Problem: Minimum Operations to Make Array Equal\n",
+    "- Idea:\n",
+    "    - Given an array arr of length n where arr[i] = (2 * i) + 1 (i.e., [1, 3, 5, ..., 2n-1])\n",
+    "    - Find minimum number of operations to make all elements equal\n",
+    "    - In one operation, you can increment or decrement any element by 1\n",
+    "    - Approach 1 (Loop-based):\n",
+    "        - The target value is the median/average of the array, which is n\n",
+    "        - Only need to process first half, as second half mirrors the operations\n",
+    "        - Loop through first n/2 elements and sum differences from target\n",
+    "    - Approach 2 (Mathematical formula):\n",
+    "        - The result follows a pattern: n²/4 for even n, (n²-1)/4 for odd n\n",
+    "        - Can be simplified to: n*n/4 using integer division\n",
+    "        - Derived from arithmetic series sum formula\n",
+    "    - Approach 3 (Two pointers optimization):\n",
+    "        - Use two pointers from both ends moving towards center\n",
+    "        - Calculate differences symmetrically for better understanding\n",
+    "        - Same time complexity but shows the pairing concept clearly\n",
+    "- Time:\n",
+    "    + Approach 1: O(n) — loop through n/2 elements\n",
+    "    + Approach 2: O(1) — direct formula calculation\n",
+    "    + Approach 3: O(n) — loop through n/2 pairs\n",
+    "- Space:\n",
+    "    + Approach 1/2/3: O(1) — only variables used\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fcbd29ef-788c-41a0-a767-cea6b4c95a9d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "#include <cmath>\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
-    "public:\n",
-    "    // Method 1\n",
+    "public:    \n",
+    "    // ---------- Approach 1: Using Loop ----------\n",
     "    int minOperationsLoop(int n) {\n",
-    "        int target = n;  \n",
+    "        if (n <= 1) return 0; // edge case\n",
+    "        \n",
+    "        int target = n;  // target value to make all elements equal\n",
     "        int res = 0;\n",
     "\n",
+    "        // Only need to process first half\n",
     "        for (int i = 0; i < n / 2; i++) {\n",
-    "            res += target - (2 * i + 1);\n",
+    "            int currentValue = 2 * i + 1;\n",
+    "            res += target - currentValue;\n",
     "        }\n",
     "        return res;\n",
     "    }\n",
     "\n",
-    "    // Method 2\n",
+    "    // ---------- Approach 2: Using Mathematical Formula ----------\n",
     "    int minOperationsFormula(int n) {\n",
+    "        if (n <= 1) return 0; // edge case\n",
+    "        \n",
+    "        // For even n: result = n²/4\n",
+    "        // For odd n: result = (n²-1)/4\n",
+    "        // Using integer division, both cases simplify to: n*n/4\n",
     "        return n * n / 4;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 3: Two Pointers (Educational) ----------\n",
+    "    int minOperationsTwoPointers(int n) {\n",
+    "        if (n <= 1) return 0; // edge case\n",
+    "        \n",
+    "        int res = 0;\n",
+    "        int left = 0;          // pointer to start\n",
+    "        int right = n - 1;     // pointer to end\n",
+    "        int target = n;        // target value\n",
+    "        \n",
+    "        // Process pairs from both ends\n",
+    "        while (left < right) {\n",
+    "            int leftValue = 2 * left + 1;\n",
+    "            int rightValue = 2 * right + 1;\n",
+    "            \n",
+    "            // Only count operations for left side\n",
+    "            // (right side mirrors, so we don't double count)\n",
+    "            res += target - leftValue;\n",
+    "            \n",
+    "            left++;\n",
+    "            right--;\n",
+    "        }\n",
+    "        \n",
+    "        return res;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Helper: Display array for visualization ----------\n",
+    "    void displayArray(int n) {\n",
+    "        cout << \"Array: [\";\n",
+    "        for (int i = 0; i < n; i++) {\n",
+    "            cout << (2 * i + 1);\n",
+    "            if (i < n - 1) cout << \", \";\n",
+    "        }\n",
+    "        cout << \"], Target = \" << n << endl;\n",
     "    }\n",
     "};"
    ]
@@ -83,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "010a6cfb-8aed-411b-989c-5b4e804555e6",
    "metadata": {},
    "outputs": [
@@ -91,45 +128,114 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=====================================\n",
       "Test case n = 1\n",
-      "Minimum operations using Loop: 0\n",
-      "Minimum operations using Formula: 0\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Array: [1], Target = 1\n",
+      "Approach 1 (Loop):        0 operations\n",
+      "Approach 2 (Formula):     0 operations\n",
+      "Approach 3 (Two Pointers): 0 operations\n",
+      "Verification: ✓ All approaches match\n",
+      "Formula breakdown: 1² / 4 = 1 / 4 = 0\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 3\n",
-      "Minimum operations using Loop: 2\n",
-      "Minimum operations using Formula: 2\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Array: [1, 3, 5], Target = 3\n",
+      "Approach 1 (Loop):        2 operations\n",
+      "Approach 2 (Formula):     2 operations\n",
+      "Approach 3 (Two Pointers): 2 operations\n",
+      "Verification: ✓ All approaches match\n",
+      "Formula breakdown: 3² / 4 = 9 / 4 = 2\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 6\n",
-      "Minimum operations using Loop: 9\n",
-      "Minimum operations using Formula: 9\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Array: [1, 3, 5, 7, 9, 11], Target = 6\n",
+      "Approach 1 (Loop):        9 operations\n",
+      "Approach 2 (Formula):     9 operations\n",
+      "Approach 3 (Two Pointers): 9 operations\n",
+      "Verification: ✓ All approaches match\n",
+      "Formula breakdown: 6² / 4 = 36 / 4 = 9\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 7\n",
-      "Minimum operations using Loop: 12\n",
-      "Minimum operations using Formula: 12\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Array: [1, 3, 5, 7, 9, 11, 13], Target = 7\n",
+      "Approach 1 (Loop):        12 operations\n",
+      "Approach 2 (Formula):     12 operations\n",
+      "Approach 3 (Two Pointers): 12 operations\n",
+      "Verification: ✓ All approaches match\n",
+      "Formula breakdown: 7² / 4 = 49 / 4 = 12\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 10\n",
-      "Minimum operations using Loop: 25\n",
-      "Minimum operations using Formula: 25\n",
-      "-------------------------\n"
+      "=====================================\n",
+      "Array: [1, 3, 5, 7, 9, 11, 13, 15, 17, 19], Target = 10\n",
+      "Approach 1 (Loop):        25 operations\n",
+      "Approach 2 (Formula):     25 operations\n",
+      "Approach 3 (Two Pointers): 25 operations\n",
+      "Verification: ✓ All approaches match\n",
+      "Formula breakdown: 10² / 4 = 100 / 4 = 25\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 15\n",
+      "=====================================\n",
+      "Array: [1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29], Target = 15\n",
+      "Approach 1 (Loop):        56 operations\n",
+      "Approach 2 (Formula):     56 operations\n",
+      "Approach 3 (Two Pointers): 56 operations\n",
+      "Verification: ✓ All approaches match\n",
+      "Formula breakdown: 15² / 4 = 225 / 4 = 56\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 20\n",
+      "=====================================\n",
+      "Array: [1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39], Target = 20\n",
+      "Approach 1 (Loop):        100 operations\n",
+      "Approach 2 (Formula):     100 operations\n",
+      "Approach 3 (Two Pointers): 100 operations\n",
+      "Verification: ✓ All approaches match\n",
+      "Formula breakdown: 20² / 4 = 400 / 4 = 100\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "Solution sol;\n",
     "\n",
-    "    // Test cases\n",
-    "    int testCases[] = {1, 3, 6, 7, 10};\n",
-    "    int size = sizeof(testCases) / sizeof(testCases[0]);\n",
-    "\n",
-    "    for (int i = 0; i < size; i++) {\n",
-    "        int n = testCases[i];\n",
+    "    // Test cases with explanation\n",
+    "    vector<int> testCases = {1, 3, 6, 7, 10, 15, 20};\n",
+    "    \n",
+    "    for (int n : testCases) {\n",
+    "        cout << \"=====================================\" << endl;\n",
     "        cout << \"Test case n = \" << n << endl;\n",
-    "        cout << \"Minimum operations using Loop: \" << sol.minOperationsLoop(n) << endl;\n",
-    "        cout << \"Minimum operations using Formula: \" << sol.minOperationsFormula(n) << endl;\n",
-    "        cout << \"-------------------------\" << endl;\n",
-    "    }\n",
-    "\n",
-    "    return 0;"
+    "        cout << \"=====================================\" << endl;\n",
+    "        \n",
+    "        // Show the array for better understanding\n",
+    "        sol.displayArray(n);\n",
+    "        \n",
+    "        // Approach 1: Loop\n",
+    "        int result1 = sol.minOperationsLoop(n);\n",
+    "        cout << \"Approach 1 (Loop):        \" << result1 << \" operations\" << endl;\n",
+    "        \n",
+    "        // Approach 2: Formula\n",
+    "        int result2 = sol.minOperationsFormula(n);\n",
+    "        cout << \"Approach 2 (Formula):     \" << result2 << \" operations\" << endl;\n",
+    "        \n",
+    "        // Approach 3: Two Pointers\n",
+    "        int result3 = sol.minOperationsTwoPointers(n);\n",
+    "        cout << \"Approach 3 (Two Pointers): \" << result3 << \" operations\" << endl;\n",
+    "        \n",
+    "        // Verify all approaches give same result\n",
+    "        bool allMatch = (result1 == result2) && (result2 == result3);\n",
+    "        cout << \"Verification: \" << (allMatch ? \"✓ All approaches match\" : \"✗ Mismatch detected!\") << endl;\n",
+    "        \n",
+    "        // Show formula calculation for educational purpose\n",
+    "        cout << \"Formula breakdown: \" << n << \"² / 4 = \" << (n * n) << \" / 4 = \" << result2 << endl;\n",
+    "        \n",
+    "        cout << endl;\n",
+    "    }"
    ]
   }
  ],
