--- a/Notebooks/1_Math/1_BasciOperation/2235_AddTwoInterger.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/2235_AddTwoInterger.ipynb
@@ -2,49 +2,86 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2e51741c-898b-4e1c-a191-e31614eb33e7",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "3c0af361-2b1f-4d5b-83d9-698e55193fab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include <iostream>\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6425fabb-7eb3-448f-870b-72ad81d20b71",
    "metadata": {},
    "source": [
     "Solution:\n",
     "\n",
     "---\n",
-    "- Solution Name: Direct Operation\n",
-    "- Idea: Sum = num1 + num_2\n",
-    "- Time: O(1)\n",
-    "- Space: O(1)\n",
+    "- Problem: Sum of Two Integers\n",
+    "- Idea:\n",
+    "    - Given two integers num1 and num2, return their sum.\n",
+    "    - Approach 1 (Direct Operation):\n",
+    "        - Simply use the + operator to add two numbers\n",
+    "        - Most straightforward and efficient way\n",
+    "    - Approach 2 (Bit Manipulation):\n",
+    "        - Use XOR (^) to add without carry\n",
+    "        - Use AND (&) and left shift (<<) to calculate carry\n",
+    "        - Repeat until carry becomes 0\n",
+    "        - This simulates addition using only bitwise operations\n",
+    "    - Approach 3 (Recursive Bit Manipulation):\n",
+    "        - Same logic as Approach 2 but implemented recursively\n",
+    "        - Base case: when carry is 0, return the sum\n",
+    "        - Recursive case: calculate new sum and carry, then recurse\n",
+    "- Time:\n",
+    "    + Approach 1: O(1) — single addition operation\n",
+    "    + Approach 2: O(log(max(num1, num2))) — iterate through bits\n",
+    "    + Approach 3: O(log(max(num1, num2))) — recursive calls for each bit level\n",
+    "- Space:\n",
+    "    + Approach 1: O(1) — no extra space\n",
+    "    + Approach 2: O(1) — only temporary variables\n",
+    "    + Approach 3: O(log(max(num1, num2))) — recursion call stack\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "86b7877f-0d9c-425d-9cae-6a6bf9ea23e8",
+   "execution_count": 1,
+   "id": "0440ef4d-5dd0-4d3d-8b2a-6d2d054dcacd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
-    "public:\n",
-    "    int sum(int num1, int num2) {\n",
+    "public:    \n",
+    "    // ---------- Approach 1: Direct Operation ----------\n",
+    "    int sum_Direct(int num1, int num2) {\n",
     "        return num1 + num2;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 2: Bit Manipulation (Iterative) ----------\n",
+    "    int sum_BitManipulation(int num1, int num2) {\n",
+    "        while (num2 != 0) {\n",
+    "            // Calculate sum without carry using XOR\n",
+    "            int sumWithoutCarry = num1 ^ num2;\n",
+    "            \n",
+    "            // Calculate carry using AND and left shift\n",
+    "            int carry = (num1 & num2) << 1;\n",
+    "            \n",
+    "            // Update num1 and num2 for next iteration\n",
+    "            num1 = sumWithoutCarry;\n",
+    "            num2 = carry;\n",
+    "        }\n",
+    "        return num1;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 3: Bit Manipulation (Recursive) ----------\n",
+    "    int sum_Recursive(int num1, int num2) {\n",
+    "        // Base case: no carry left\n",
+    "        if (num2 == 0) {\n",
+    "            return num1;\n",
+    "        }\n",
+    "        \n",
+    "        // Calculate sum without carry\n",
+    "        int sumWithoutCarry = num1 ^ num2;\n",
+    "        \n",
+    "        // Calculate carry\n",
+    "        int carry = (num1 & num2) << 1;\n",
+    "        \n",
+    "        // Recursive call with new values\n",
+    "        return sum_Recursive(sumWithoutCarry, carry);\n",
     "    }\n",
     "};"
    ]
@@ -59,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a87247b0-7ae0-4b2b-a6b5-8e4087b68c39",
    "metadata": {},
    "outputs": [
@@ -67,37 +104,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test case: num1 = 1, num2 = 2\n",
-      "Sum: 3\n",
-      "-------------------------\n",
-      "Test case: num1 = 5, num2 = 10\n",
-      "Sum: 15\n",
-      "-------------------------\n",
-      "Test case: num1 = 10, num2 = 20\n",
-      "Sum: 30\n",
-      "-------------------------\n",
-      "Test case: num1 = 100, num2 = 200\n",
-      "Sum: 300\n",
-      "-------------------------\n"
+      "=====================================\n",
+      "Test case 1: num1 = 1, num2 = 2\n",
+      "=====================================\n",
+      "Approach 1 (Direct):    3\n",
+      "Approach 2 (Bit Iter):  3\n",
+      "Approach 3 (Bit Recur): 3\n",
+      "All approaches match: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case 2: num1 = 5, num2 = 10\n",
+      "=====================================\n",
+      "Approach 1 (Direct):    15\n",
+      "Approach 2 (Bit Iter):  15\n",
+      "Approach 3 (Bit Recur): 15\n",
+      "All approaches match: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case 3: num1 = 10, num2 = 20\n",
+      "=====================================\n",
+      "Approach 1 (Direct):    30\n",
+      "Approach 2 (Bit Iter):  30\n",
+      "Approach 3 (Bit Recur): 30\n",
+      "All approaches match: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case 4: num1 = 100, num2 = 200\n",
+      "=====================================\n",
+      "Approach 1 (Direct):    300\n",
+      "Approach 2 (Bit Iter):  300\n",
+      "Approach 3 (Bit Recur): 300\n",
+      "All approaches match: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case 5: num1 = -5, num2 = 10\n",
+      "=====================================\n",
+      "Approach 1 (Direct):    5\n",
+      "Approach 2 (Bit Iter):  5\n",
+      "Approach 3 (Bit Recur): 5\n",
+      "All approaches match: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case 6: num1 = -15, num2 = -20\n",
+      "=====================================\n",
+      "Approach 1 (Direct):    -35\n",
+      "Approach 2 (Bit Iter):  -35\n",
+      "Approach 3 (Bit Recur): -35\n",
+      "All approaches match: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case 7: num1 = 0, num2 = 0\n",
+      "=====================================\n",
+      "Approach 1 (Direct):    0\n",
+      "Approach 2 (Bit Iter):  0\n",
+      "Approach 3 (Bit Recur): 0\n",
+      "All approaches match: ✓\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "    Solution sol;\n",
+    "Solution sol;\n",
     "\n",
-    "    // Test cases: pairs of numbers\n",
-    "    pair<int, int> testCases[] = {{1, 2}, {5, 10}, {10, 20}, {100, 200}};\n",
-    "    int size = sizeof(testCases) / sizeof(testCases[0]);\n",
+    "// Test cases: pairs of numbers\n",
+    "pair<int, int> testCases[] = {\n",
+    "    {1, 2}, \n",
+    "    {5, 10}, \n",
+    "    {10, 20}, \n",
+    "    {100, 200},\n",
+    "    {-5, 10},\n",
+    "    {-15, -20},\n",
+    "    {0, 0}\n",
+    "};\n",
     "\n",
-    "    for(int i = 0; i < size; i++) {\n",
-    "        int num1 = testCases[i].first;\n",
-    "        int num2 = testCases[i].second;\n",
-    "        cout << \"Test case: num1 = \" << num1 << \", num2 = \" << num2 << endl;\n",
-    "        cout << \"Sum: \" << sol.sum(num1, num2) << endl;\n",
-    "        cout << \"-------------------------\" << endl;\n",
-    "    }\n",
+    "int size = sizeof(testCases) / sizeof(testCases[0]);\n",
     "\n",
-    "    return 0;"
+    "for (int i = 0; i < size; i++) {\n",
+    "    int num1 = testCases[i].first;\n",
+    "    int num2 = testCases[i].second;\n",
+    "    \n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    cout << \"Test case \" << (i + 1) << \": num1 = \" << num1 << \", num2 = \" << num2 << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    \n",
+    "    // Approach 1: Direct Operation\n",
+    "    int result1 = sol.sum_Direct(num1, num2);\n",
+    "    cout << \"Approach 1 (Direct):    \" << result1 << endl;\n",
+    "    \n",
+    "    // Approach 2: Bit Manipulation (Iterative)\n",
+    "    int result2 = sol.sum_BitManipulation(num1, num2);\n",
+    "    cout << \"Approach 2 (Bit Iter):  \" << result2 << endl;\n",
+    "    \n",
+    "    // Approach 3: Bit Manipulation (Recursive)\n",
+    "    int result3 = sol.sum_Recursive(num1, num2);\n",
+    "    cout << \"Approach 3 (Bit Recur): \" << result3 << endl;\n",
+    "    \n",
+    "    // Verification\n",
+    "    bool allMatch = (result1 == result2) && (result2 == result3);\n",
+    "    cout << \"All approaches match: \" << (allMatch ? \"✓\" : \"✗\") << endl;\n",
+    "    cout << endl;\n",
+    "}"
    ]
   }
  ],
