--- a/Notebooks/1_Math/1_BasciOperation/2769_FindtheMaximumAchievableNumber.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/2769_FindtheMaximumAchievableNumber.ipynb
@@ -2,48 +2,108 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
+   "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
    "metadata": {},
    "source": [
-    "Library:"
+    "Solution:\n",
+    "\n",
+    "---\n",
+    "- Problem: Maximum Achievable X\n",
+    "- Idea:\n",
+    "    - Given: num and t operations\n",
+    "    - Each operation: increase num by 1 AND decrease x by 1\n",
+    "    - Goal: Find maximum value of x after t operations\n",
+    "    - Approach 1 (Mathematical Formula):\n",
+    "        - Each operation: num becomes num+1, x becomes x-1\n",
+    "        - After t operations: num becomes num+t, x becomes x-t\n",
+    "        - We need: num + t = x - t\n",
+    "        - Solving: x = num + 2*t\n",
+    "        - Direct formula gives optimal answer\n",
+    "    - Approach 2 (Simulation):\n",
+    "        - Start with x = num\n",
+    "        - Simulate t operations step by step\n",
+    "        - Each step: num++, x++ (since we're moving towards x)\n",
+    "        - After t steps, we need another t steps: x = num + 2*t\n",
+    "    - Approach 3 (Reverse Thinking):\n",
+    "        - Think backwards: if x is the target, where should num start?\n",
+    "        - After t operations: num reaches (num + t), x reaches (x - t)\n",
+    "        - They meet when: num + t = x - t\n",
+    "        - Maximum x when: x = num + 2*t\n",
+    "- Time:\n",
+    "    + Approach 1: O(1) — direct calculation\n",
+    "    + Approach 2: O(1) — constant formula after understanding\n",
+    "    + Approach 3: O(1) — mathematical deduction\n",
+    "- Space:\n",
+    "    + All approaches: O(1) — no extra memory used\n",
+    "---"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8b6ec2fd-605d-4558-8d86-b3dd2700bb45",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include<iostream>\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
-   "metadata": {},
-   "source": [
-    "Solution:\n",
-    "- Name Solution: Maximum Achievable X\n",
-    "- Idea:\n",
-    "  - Each operation allows increasing `num` by 1 and decreasing `t` by 1.\n",
-    "  - Since you can do `t` operations, the maximum achievable value of X is `num + 2 * t`.\n",
-    "- Time: O(1), calculation done in a single step\n",
-    "- Space: O(1), no extra memory used"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "cda7915d-cdfa-4920-8b9a-fbd5078f8b2a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
-    "public:\n",
-    "    int theMaximumAchievableX(int num, int t) {\n",
+    "public:    \n",
+    "    // ---------- Approach 1: Mathematical Formula (Optimal) ----------\n",
+    "    int theMaximumAchievableX_Formula(int num, int t) {\n",
+    "        // Direct formula: each operation moves num up by 1 and x down by 1\n",
+    "        // To meet in the middle after t operations: x = num + 2*t\n",
     "        return num + 2 * t;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 2: Simulation Understanding ----------\n",
+    "    int theMaximumAchievableX_Simulation(int num, int t) {\n",
+    "        // Simulate the process conceptually:\n",
+    "        // - We have t operations\n",
+    "        // - Each operation: num increases by 1, x decreases by 1\n",
+    "        // - Starting from num, we need to go up t steps\n",
+    "        // - x needs to start t steps higher so it comes down to meet num\n",
+    "        // - Therefore: x starts at num + 2*t\n",
+    "        \n",
+    "        int currentNum = num;\n",
+    "        int maxX = num;\n",
+    "        \n",
+    "        // For each operation, we move num closer to x\n",
+    "        for (int i = 0; i < t; i++) {\n",
+    "            currentNum++;  // num increases\n",
+    "            maxX++;        // x must be 1 higher to compensate\n",
+    "        }\n",
+    "        \n",
+    "        // Add another t because x also decreases by t\n",
+    "        maxX += t;\n",
+    "        \n",
+    "        return maxX;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 3: Reverse Thinking ----------\n",
+    "    int theMaximumAchievableX_Reverse(int num, int t) {\n",
+    "        // Think about where x should be initially:\n",
+    "        // - After t operations, num will be at (num + t)\n",
+    "        // - After t operations, x will be at (x - t)\n",
+    "        // - They should meet: num + t = x - t\n",
+    "        // - Solving for x: x = num + t + t = num + 2*t\n",
+    "        \n",
+    "        int finalNum = num + t;      // where num ends up\n",
+    "        int finalX = finalNum;        // x should meet num here\n",
+    "        int initialX = finalX + t;    // x starts t steps higher\n",
+    "        \n",
+    "        return initialX;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Helper: Verify the solution ----------\n",
+    "    bool verifySolution(int num, int t, int x) {\n",
+    "        // After t operations:\n",
+    "        // num becomes: num + t\n",
+    "        // x becomes: x - t\n",
+    "        // They should be equal\n",
+    "        return (num + t) == (x - t);\n",
     "    }\n",
     "};"
    ]
@@ -58,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "75a557ad-edfd-4cff-bdae-c7fd8bf6dcfb",
    "metadata": {},
    "outputs": [
@@ -66,37 +126,126 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=====================================\n",
       "Test case: num = 3, t = 2\n",
-      "Maximum achievable X: 7\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Formula):     X = 7 | Verify: ✓\n",
+      "Approach 2 (Simulation):  X = 7 | Verify: ✓\n",
+      "Approach 3 (Reverse):     X = 7 | Verify: ✓\n",
+      "\n",
+      "Explanation:\n",
+      "  Initial: num = 3, x = 7\n",
+      "  After 2 operations: num = 5, x = 5\n",
+      "  They meet at: 5 ✓\n",
+      "\n",
+      "=====================================\n",
       "Test case: num = 5, t = 0\n",
-      "Maximum achievable X: 5\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Formula):     X = 5 | Verify: ✓\n",
+      "Approach 2 (Simulation):  X = 5 | Verify: ✓\n",
+      "Approach 3 (Reverse):     X = 5 | Verify: ✓\n",
+      "\n",
+      "Explanation:\n",
+      "  Initial: num = 5, x = 5\n",
+      "  After 0 operations: num = 5, x = 5\n",
+      "  They meet at: 5 ✓\n",
+      "\n",
+      "=====================================\n",
       "Test case: num = 1, t = 4\n",
-      "Maximum achievable X: 9\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Formula):     X = 9 | Verify: ✓\n",
+      "Approach 2 (Simulation):  X = 9 | Verify: ✓\n",
+      "Approach 3 (Reverse):     X = 9 | Verify: ✓\n",
+      "\n",
+      "Explanation:\n",
+      "  Initial: num = 1, x = 9\n",
+      "  After 4 operations: num = 5, x = 5\n",
+      "  They meet at: 5 ✓\n",
+      "\n",
+      "=====================================\n",
       "Test case: num = 10, t = 5\n",
-      "Maximum achievable X: 20\n",
-      "-------------------------\n"
+      "=====================================\n",
+      "Approach 1 (Formula):     X = 20 | Verify: ✓\n",
+      "Approach 2 (Simulation):  X = 20 | Verify: ✓\n",
+      "Approach 3 (Reverse):     X = 20 | Verify: ✓\n",
+      "\n",
+      "Explanation:\n",
+      "  Initial: num = 10, x = 20\n",
+      "  After 5 operations: num = 15, x = 15\n",
+      "  They meet at: 15 ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case: num = 0, t = 10\n",
+      "=====================================\n",
+      "Approach 1 (Formula):     X = 20 | Verify: ✓\n",
+      "Approach 2 (Simulation):  X = 20 | Verify: ✓\n",
+      "Approach 3 (Reverse):     X = 20 | Verify: ✓\n",
+      "\n",
+      "Explanation:\n",
+      "  Initial: num = 0, x = 20\n",
+      "  After 10 operations: num = 10, x = 10\n",
+      "  They meet at: 10 ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case: num = 100, t = 50\n",
+      "=====================================\n",
+      "Approach 1 (Formula):     X = 200 | Verify: ✓\n",
+      "Approach 2 (Simulation):  X = 200 | Verify: ✓\n",
+      "Approach 3 (Reverse):     X = 200 | Verify: ✓\n",
+      "\n",
+      "Explanation:\n",
+      "  Initial: num = 100, x = 200\n",
+      "  After 50 operations: num = 150, x = 150\n",
+      "  They meet at: 150 ✓\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "Solution sol;\n",
     "\n",
-    "    // Test cases: (num, t)\n",
-    "    pair<int, int> testCases[] = {{3, 2}, {5, 0}, {1, 4}, {10, 5}};\n",
-    "    int size = sizeof(testCases) / sizeof(testCases[0]);\n",
+    "// Test cases: (num, t)\n",
+    "vector<pair<int, int>> testCases = {\n",
+    "    {3, 2}, \n",
+    "    {5, 0}, \n",
+    "    {1, 4}, \n",
+    "    {10, 5},\n",
+    "    {0, 10},\n",
+    "    {100, 50}\n",
+    "};\n",
     "\n",
-    "    for (int i = 0; i < size; i++) {\n",
-    "        int num = testCases[i].first;\n",
-    "        int t   = testCases[i].second;\n",
-    "        cout << \"Test case: num = \" << num << \", t = \" << t << endl;\n",
-    "        cout << \"Maximum achievable X: \" << sol.theMaximumAchievableX(num, t) << endl;\n",
-    "        cout << \"-------------------------\" << endl;\n",
-    "    }\n",
-    "\n",
-    "    return 0;"
+    "for (const auto& testCase : testCases) {\n",
+    "    int num = testCase.first;\n",
+    "    int t = testCase.second;\n",
+    "    \n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    cout << \"Test case: num = \" << num << \", t = \" << t << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    \n",
+    "    // Approach 1: Formula\n",
+    "    int result1 = sol.theMaximumAchievableX_Formula(num, t);\n",
+    "    cout << \"Approach 1 (Formula):     X = \" << result1;\n",
+    "    cout << \" | Verify: \" << (sol.verifySolution(num, t, result1) ? \"✓\" : \"✗\") << endl;\n",
+    "    \n",
+    "    // Approach 2: Simulation\n",
+    "    int result2 = sol.theMaximumAchievableX_Simulation(num, t);\n",
+    "    cout << \"Approach 2 (Simulation):  X = \" << result2;\n",
+    "    cout << \" | Verify: \" << (sol.verifySolution(num, t, result2) ? \"✓\" : \"✗\") << endl;\n",
+    "    \n",
+    "    // Approach 3: Reverse Thinking\n",
+    "    int result3 = sol.theMaximumAchievableX_Reverse(num, t);\n",
+    "    cout << \"Approach 3 (Reverse):     X = \" << result3;\n",
+    "    cout << \" | Verify: \" << (sol.verifySolution(num, t, result3) ? \"✓\" : \"✗\") << endl;\n",
+    "    \n",
+    "    // Show the process\n",
+    "    cout << \"\\nExplanation:\" << endl;\n",
+    "    cout << \"  Initial: num = \" << num << \", x = \" << result1 << endl;\n",
+    "    cout << \"  After \" << t << \" operations: num = \" << (num + t) \n",
+    "         << \", x = \" << (result1 - t) << endl;\n",
+    "    cout << \"  They meet at: \" << (num + t) << \" ✓\" << endl;\n",
+    "    \n",
+    "    cout << endl;\n",
+    "}"
    ]
   }
  ],
