--- a/Notebooks/1_Math/1_BasciOperation/702929_Checkifdivisibleby4.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/702929_Checkifdivisibleby4.ipynb
@@ -2,76 +2,103 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "a2e664f7-04d2-4119-8f37-48e4502ed228",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include<iostream>\n",
-    "#include<vector>\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
    "metadata": {},
    "source": [
     "Solution\n",
     "\n",
     "---\n",
-    "- Method 1:\n",
-    "    - Solution Namen: Using Last Digits Check\n",
+    "- Problem: Check if a number (given as string) is divisible by 4\n",
     "    - Idea:\n",
-    "        - For divisibility by 4, only the last two digits of a number matter.\n",
-    "        - If the number has one digit, check that digit % 4 == 0.\n",
-    "        - If it has two or more digits, form a number from the last two digits and check % 4 == 0.\n",
-    "    - Time: O(1), only last one or two digits are processed\n",
-    "    - Space: O(1), constant space\n",
-    "---\n",
-    "- Method 2:\n",
-    "    - Solution Name: Using Convert and Modulo\n",
-    "    - Idea: Convert the string to an integer and check divisibility by 4 using the modulo operator.\n",
-    "    - Time: O(1) for small numbers (depends on stoi), practically constant for reasonable string lengths\n",
-    "    - Space: O(1), no extra structures used\n",
+    "        - Approach 1 (Last Digits Check - Math Rule):\n",
+    "            - For divisibility by 4, only the last two digits matter\n",
+    "            - If single digit: check digit % 4 == 0\n",
+    "            - If two+ digits: form number from last two digits and check % 4 == 0\n",
+    "            - Based on divisibility rule: 10^2 = 100 is divisible by 4\n",
+    "        - Approach 2 (String to Integer Conversion):\n",
+    "            - Convert entire string to integer using stoi()\n",
+    "            - Check divisibility using modulo operator\n",
+    "            - Simple but limited by integer overflow for very large numbers\n",
+    "        - Approach 3 (Digit-by-Digit Modulo):\n",
+    "            - Process string character by character from left to right\n",
+    "            - Maintain running remainder using: remainder = (remainder * 10 + digit) % 4\n",
+    "            - Final remainder == 0 means divisible by 4\n",
+    "            - Works for arbitrarily large numbers (no overflow)\n",
+    "    - Time:\n",
+    "        + Approach 1: O(1) - only check last 1-2 digits\n",
+    "        + Approach 2: O(n) - stoi() processes all digits, but practically O(1) for small numbers\n",
+    "        + Approach 3: O(n) - iterate through all n digits\n",
+    "    - Space:\n",
+    "        + Approach 1: O(1) - constant space\n",
+    "        + Approach 2: O(1) - constant space\n",
+    "        + Approach 3: O(1) - constant space\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c219f965-607a-4e69-bb4d-48f4db3a5a25",
+   "execution_count": 1,
+   "id": "d69e3651-1913-476d-a989-c0bb33c63bcb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "#include <string>\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
     "public:\n",
-    "    // Method 1\n",
-    "    int divisibleBy4(string N) {\n",
+    "     // ---------- Approach 1: Using Last Digits Check (Fastest) ----------\n",
+    "    int divisibleBy4_LastDigits(string N) {\n",
     "        int n = N.size();\n",
-    "\n",
+    "        \n",
+    "        // Edge case: empty string\n",
+    "        if (n == 0) return 0;\n",
+    "        \n",
+    "        // Single digit: check directly\n",
     "        if (n == 1) {\n",
     "            int lastDigit = N[n - 1] - '0';\n",
     "            return (lastDigit % 4 == 0);\n",
     "        }\n",
-    "\n",
+    "        \n",
+    "        // Two or more digits: check last two digits\n",
     "        int lastTwo = (N[n - 2] - '0') * 10 + (N[n - 1] - '0');\n",
     "        return (lastTwo % 4 == 0);\n",
     "    }\n",
-    "\n",
-    "    // Method 2\n",
-    "    int divisibleBy4Convert(string N) {\n",
-    "        return stoi(N) % 4 == 0;\n",
+    "    \n",
+    "    // ---------- Approach 2: Using Convert and Modulo ----------\n",
+    "    int divisibleBy4_Convert(string N) {\n",
+    "        // Edge case: empty string\n",
+    "        if (N.empty()) return 0;\n",
+    "        \n",
+    "        // Warning: This approach fails for very large numbers due to integer overflow\n",
+    "        // Works fine for numbers that fit in int range (-2^31 to 2^31-1)\n",
+    "        try {\n",
+    "            return stoi(N) % 4 == 0;\n",
+    "        } catch (...) {\n",
+    "            // Handle overflow - fallback to approach 3\n",
+    "            return divisibleBy4_DigitByDigit(N);\n",
+    "        }\n",
     "    }\n",
-    "};"
+    "    \n",
+    "    // ---------- Approach 3: Digit-by-Digit Modulo (Handles Large Numbers) ----------\n",
+    "    int divisibleBy4_DigitByDigit(string N) {\n",
+    "        // Edge case: empty string\n",
+    "        if (N.empty()) return 0;\n",
+    "        \n",
+    "        int remainder = 0;\n",
+    "        \n",
+    "        // Process each digit from left to right\n",
+    "        // Key insight: (a * 10 + b) % 4 = ((a % 4) * 10 + b) % 4\n",
+    "        for (char ch : N) {\n",
+    "            int digit = ch - '0';\n",
+    "            remainder = (remainder * 10 + digit) % 4;\n",
+    "        }\n",
+    "        \n",
+    "        return (remainder == 0);\n",
+    "    }\n",
+    "};\n"
    ]
   },
   {
@@ -84,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "1c955dd3-1495-4458-a68e-68cb92dc8db4",
    "metadata": {},
    "outputs": [
@@ -92,41 +119,152 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=====================================\n",
       "Test case N = 8\n",
-      "Divisible by 4? Yes\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Last Digits): Yes | Last 2 digits: 8\n",
+      "Approach 2 (Convert):     Yes | Value: 8\n",
+      "Approach 3 (Digit×Digit): Yes | Works for any size\n",
+      "\n",
+      "=====================================\n",
+      "Test case N = 5\n",
+      "=====================================\n",
+      "Approach 1 (Last Digits): No | Last 2 digits: 5\n",
+      "Approach 2 (Convert):     No | Value: 5\n",
+      "Approach 3 (Digit×Digit): No | Works for any size\n",
+      "\n",
+      "=====================================\n",
       "Test case N = 12\n",
-      "Divisible by 4? Yes\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Last Digits): Yes | Last 2 digits: 12\n",
+      "Approach 2 (Convert):     Yes | Value: 12\n",
+      "Approach 3 (Digit×Digit): Yes | Works for any size\n",
+      "\n",
+      "=====================================\n",
       "Test case N = 25\n",
-      "Divisible by 4? No\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Last Digits): No | Last 2 digits: 25\n",
+      "Approach 2 (Convert):     No | Value: 25\n",
+      "Approach 3 (Digit×Digit): No | Works for any size\n",
+      "\n",
+      "=====================================\n",
       "Test case N = 100\n",
-      "Divisible by 4? Yes\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Last Digits): Yes | Last 2 digits: 00\n",
+      "Approach 2 (Convert):     Yes | Value: 100\n",
+      "Approach 3 (Digit×Digit): Yes | Works for any size\n",
+      "\n",
+      "=====================================\n",
       "Test case N = 1234\n",
-      "Divisible by 4? No\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Last Digits): No | Last 2 digits: 34\n",
+      "Approach 2 (Convert):     No | Value: 1234\n",
+      "Approach 3 (Digit×Digit): No | Works for any size\n",
+      "\n",
+      "=====================================\n",
       "Test case N = 9999\n",
-      "Divisible by 4? No\n",
-      "-------------------------\n"
+      "=====================================\n",
+      "Approach 1 (Last Digits): No | Last 2 digits: 99\n",
+      "Approach 2 (Convert):     No | Value: 9999\n",
+      "Approach 3 (Digit×Digit): No | Works for any size\n",
+      "\n",
+      "=====================================\n",
+      "Test case N = 4444\n",
+      "=====================================\n",
+      "Approach 1 (Last Digits): Yes | Last 2 digits: 44\n",
+      "Approach 2 (Convert):     Yes | Value: 4444\n",
+      "Approach 3 (Digit×Digit): Yes | Works for any size\n",
+      "\n",
+      "=====================================\n",
+      "Test case N = 123456789012\n",
+      "=====================================\n",
+      "Approach 1 (Last Digits): Yes | Last 2 digits: 12\n",
+      "Approach 2 (Convert):     Skipped (number too large for int)\n",
+      "Approach 3 (Digit×Digit): Yes | Works for any size\n",
+      "\n",
+      "=====================================\n",
+      "Test case N = 1000000000000000000000\n",
+      "=====================================\n",
+      "Approach 1 (Last Digits): Yes | Last 2 digits: 00\n",
+      "Approach 2 (Convert):     Skipped (number too large for int)\n",
+      "Approach 3 (Digit×Digit): Yes | Works for any size\n",
+      "\n",
+      "=====================================\n",
+      "PERFORMANCE SUMMARY:\n",
+      "=====================================\n",
+      "Approach 1 (Last Digits):  ⚡ FASTEST - O(1), only checks 1-2 digits\n",
+      "Approach 2 (Convert):      ⚠️  LIMITED - Fast but fails on large numbers\n",
+      "Approach 3 (Digit×Digit):  ✓  ROBUST - O(n) but handles any size\n",
+      "\n",
+      "RECOMMENDATION:\n",
+      "- Use Approach 1 for best performance (math rule)\n",
+      "- Use Approach 3 for numbers larger than int range\n",
+      "- Avoid Approach 2 for production (overflow risk)\n"
      ]
     }
    ],
    "source": [
-    "    Solution sol;\n",
+    "Solution sol;\n",
     "\n",
-    "    // Test cases\n",
-    "    vector<string> testCases = {\"8\", \"12\", \"25\", \"100\", \"1234\", \"9999\"};\n",
+    "// Test cases including edge cases\n",
+    "vector<string> testCases = {\n",
+    "    \"8\",           // Single digit divisible by 4\n",
+    "    \"5\",           // Single digit not divisible by 4\n",
+    "    \"12\",          // Two digits divisible by 4\n",
+    "    \"25\",          // Two digits not divisible by 4\n",
+    "    \"100\",         // Multiple of 100\n",
+    "    \"1234\",        // Random number not divisible by 4\n",
+    "    \"9999\",        // All 9s\n",
+    "    \"4444\",        // All 4s\n",
+    "    \"123456789012\", // Large number (tests overflow handling)\n",
+    "    \"1000000000000000000000\" // Very large number (beyond int range)\n",
+    "};\n",
     "\n",
-    "    for (auto &num : testCases) {\n",
-    "        cout << \"Test case N = \" << num << endl;\n",
-    "        cout << \"Divisible by 4? \" \n",
-    "             << (sol.divisibleBy4Convert(num) ? \"Yes\" : \"No\") << endl;\n",
-    "        cout << \"-------------------------\" << endl;\n",
+    "for (const auto &num : testCases) {\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    cout << \"Test case N = \" << num << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    \n",
+    "    // Approach 1: Last Digits Check\n",
+    "    bool res1 = sol.divisibleBy4_LastDigits(num);\n",
+    "    cout << \"Approach 1 (Last Digits): \" << (res1 ? \"Yes\" : \"No\");\n",
+    "    cout << \" | Last 2 digits: \";\n",
+    "    if (num.size() >= 2) {\n",
+    "        cout << num.substr(num.size() - 2);\n",
+    "    } else {\n",
+    "        cout << num;\n",
     "    }\n",
+    "    cout << endl;\n",
+    "    \n",
+    "    // Approach 2: Convert (with overflow warning for large numbers)\n",
+    "    if (num.size() <= 9) { // Safe for int range\n",
+    "        bool res2 = sol.divisibleBy4_Convert(num);\n",
+    "        cout << \"Approach 2 (Convert):     \" << (res2 ? \"Yes\" : \"No\");\n",
+    "        cout << \" | Value: \" << stoi(num) << endl;\n",
+    "    } else {\n",
+    "        cout << \"Approach 2 (Convert):     Skipped (number too large for int)\" << endl;\n",
+    "    }\n",
+    "    \n",
+    "    // Approach 3: Digit-by-Digit\n",
+    "    bool res3 = sol.divisibleBy4_DigitByDigit(num);\n",
+    "    cout << \"Approach 3 (Digit×Digit): \" << (res3 ? \"Yes\" : \"No\");\n",
+    "    cout << \" | Works for any size\" << endl;\n",
+    "    \n",
+    "    cout << endl;\n",
+    "}\n",
     "\n",
-    "    return 0;"
+    "// Performance comparison note\n",
+    "cout << \"=====================================\" << endl;\n",
+    "cout << \"PERFORMANCE SUMMARY:\" << endl;\n",
+    "cout << \"=====================================\" << endl;\n",
+    "cout << \"Approach 1 (Last Digits):  ⚡ FASTEST - O(1), only checks 1-2 digits\" << endl;\n",
+    "cout << \"Approach 2 (Convert):      ⚠️  LIMITED - Fast but fails on large numbers\" << endl;\n",
+    "cout << \"Approach 3 (Digit×Digit):  ✓  ROBUST - O(n) but handles any size\" << endl;\n",
+    "cout << endl;\n",
+    "cout << \"RECOMMENDATION:\" << endl;\n",
+    "cout << \"- Use Approach 1 for best performance (math rule)\" << endl;\n",
+    "cout << \"- Use Approach 3 for numbers larger than int range\" << endl;\n",
+    "cout << \"- Avoid Approach 2 for production (overflow risk)\" << endl;"
    ]
   }
  ],
