--- a/Notebooks/1_Math/1_BasciOperation/703909_ModularExponentiation.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/703909_ModularExponentiation.ipynb
@@ -2,78 +2,101 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "00a889ac-e8d0-4d85-bd07-d2e4bcebd383",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include<iostream>\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
    "metadata": {},
    "source": [
     "Solution:\n",
     "\n",
     "---\n",
-    "- Method 1:\n",
-    "    - Solution Name: Fast Exponentiation (Binary Exponentiation / Exponentiation by squaring)\n",
-    "    - Idea:\n",
-    "        - Compute x^n % M efficiently by squaring the base and halving the exponent at each step.\n",
-    "        - If the exponent is odd, multiply the result by current base. This avoids computing x^n directly.\n",
-    "    - Time: O(log N), since exponent n is halved at each step\n",
-    "    - Space: O(1), only a few variables used\n",
-    "---\n",
-    "- Method 2:\n",
-    "    - Solution Name: Simple Loop Method\n",
-    "    - Idea:\n",
-    "         - Compute x^n % M by multiplying x repeatedly n times and taking modulo at each step.\n",
-    "         -  Simple and straightforward but less efficient for large n.\n",
-    "    - Time: O(N), multiplies n times\n",
-    "    - Space: O(1), only a few variables used\n",
+    "- Problem: Modular Exponentiation\n",
+    "- Idea: Compute x^n % M efficiently without overflow\n",
+    "    - Approach 1 (Fast Exponentiation / Binary Exponentiation):\n",
+    "        - Use the property: x^n = (x^2)^(n/2) if n is even\n",
+    "        - If n is odd: x^n = x * x^(n-1)\n",
+    "        - Process n in binary, squaring base and halving exponent\n",
+    "        - Take modulo at each step to prevent overflow\n",
+    "    - Approach 2 (Simple Loop):\n",
+    "        - Multiply x repeatedly n times\n",
+    "        - Take modulo at each multiplication\n",
+    "        - Straightforward but inefficient for large n\n",
+    "    - Approach 3 (Recursive Fast Exponentiation):\n",
+    "        - Divide and conquer approach\n",
+    "        - Base case: n = 0 returns 1\n",
+    "        - Recursive: compute half = pow(x, n/2)\n",
+    "        - If n is even: result = half * half\n",
+    "        - If n is odd: result = half * half * x\n",
+    "- Time:\n",
+    "    + Approach 1: O(log N) — exponent halved at each iteration\n",
+    "    + Approach 2: O(N) — multiplies n times\n",
+    "    + Approach 3: O(log N) — recursive depth is log N\n",
+    "- Space:\n",
+    "    + Approach 1: O(1) — only variables\n",
+    "    + Approach 2: O(1) — only variables\n",
+    "    + Approach 3: O(log N) — recursion stack depth\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "148dd946-79d3-47eb-a40e-076ec18455cb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "#include <cmath>\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
-    "public:\n",
-    "    // Method 1\n",
+    "public:   \n",
+    "    // ---------- Approach 1: Fast Exponentiation (Iterative) ----------\n",
     "    int powModFast(int x, int n, int M) {\n",
+    "        if (M == 1) return 0; // edge case\n",
+    "        if (n == 0) return 1; // x^0 = 1\n",
+    "        \n",
     "        long res = 1;\n",
-    "        x %= M;  // ensure x < M to avoid overflow\n",
+    "        long base = x % M;  // ensure base < M to avoid overflow\n",
+    "        \n",
     "        while (n > 0) {\n",
-    "            if (n & 1) // if n is odd\n",
-    "                res = (res * x) % M;\n",
-    "            x = (long)x * x % M; // square the base\n",
-    "            n >>= 1; // divide n by 2\n",
+    "            if (n & 1) // if n is odd (check last bit)\n",
+    "                res = (res * base) % M;\n",
+    "            base = (base * base) % M; // square the base\n",
+    "            n >>= 1; // divide n by 2 (right shift)\n",
     "        }\n",
     "        return (int)res;\n",
     "    }\n",
-    "\n",
-    "    // Method 2\n",
+    "    \n",
+    "    // ---------- Approach 2: Simple Loop Method ----------\n",
     "    int powModLoop(int x, int n, int M) {\n",
+    "        if (M == 1) return 0; // edge case\n",
+    "        if (n == 0) return 1; // x^0 = 1\n",
+    "        \n",
     "        long res = 1;\n",
+    "        x %= M; // reduce x first\n",
+    "        \n",
     "        for (int i = 1; i <= n; i++) {\n",
     "            res = (res * x) % M;\n",
     "        }\n",
     "        return (int)res;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 3: Recursive Fast Exponentiation ----------\n",
+    "    int powModRecursive(int x, int n, int M) {\n",
+    "        if (M == 1) return 0; // edge case\n",
+    "        if (n == 0) return 1; // base case: x^0 = 1\n",
+    "        \n",
+    "        x %= M; // reduce x first\n",
+    "        \n",
+    "        // Recursive case: divide and conquer\n",
+    "        long half = powModRecursive(x, n / 2, M);\n",
+    "        half = (half * half) % M;\n",
+    "        \n",
+    "        // If n is odd, multiply by x one more time\n",
+    "        if (n & 1) {\n",
+    "            half = (half * x) % M;\n",
+    "        }\n",
+    "        \n",
+    "        return (int)half;\n",
     "    }\n",
     "};"
    ]
@@ -88,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "73ba59b0-3c1c-4e00-bc91-46bd690ae31a",
    "metadata": {},
    "outputs": [
@@ -96,50 +119,141 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=====================================\n",
       "Test case: x = 2, n = 10, M = 1000\n",
-      "Result using Loop: 24\n",
-      "Result using Fast Exponentiation: 24\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Loop):      24 | Verify: 2^10 mod 1000\n",
+      "Approach 2 (Fast):      24 | Time: O(log n) = O(3)\n",
+      "Approach 3 (Recursive): 24 | Time: O(log n) = O(3)\n",
+      "All approaches match: ✓\n",
+      "\n",
+      "=====================================\n",
       "Test case: x = 3, n = 7, M = 13\n",
-      "Result using Loop: 3\n",
-      "Result using Fast Exponentiation: 3\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Loop):      3 | Verify: 3^7 mod 13\n",
+      "Approach 2 (Fast):      3 | Time: O(log n) = O(3)\n",
+      "Approach 3 (Recursive): 3 | Time: O(log n) = O(3)\n",
+      "All approaches match: ✓\n",
+      "\n",
+      "=====================================\n",
       "Test case: x = 10, n = 5, M = 17\n",
-      "Result using Loop: 6\n",
-      "Result using Fast Exponentiation: 6\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Loop):      6 | Verify: 10^5 mod 17\n",
+      "Approach 2 (Fast):      6 | Time: O(log n) = O(2)\n",
+      "Approach 3 (Recursive): 6 | Time: O(log n) = O(2)\n",
+      "All approaches match: ✓\n",
+      "\n",
+      "=====================================\n",
       "Test case: x = 5, n = 20, M = 100\n",
-      "Result using Loop: 25\n",
-      "Result using Fast Exponentiation: 25\n",
-      "-------------------------\n"
+      "=====================================\n",
+      "Approach 1 (Loop):      25 | Verify: 5^20 mod 100\n",
+      "Approach 2 (Fast):      25 | Time: O(log n) = O(4)\n",
+      "Approach 3 (Recursive): 25 | Time: O(log n) = O(4)\n",
+      "All approaches match: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case: x = 7, n = 15, M = 29\n",
+      "=====================================\n",
+      "Approach 1 (Loop):      7 | Verify: 7^15 mod 29\n",
+      "Approach 2 (Fast):      7 | Time: O(log n) = O(4)\n",
+      "Approach 3 (Recursive): 7 | Time: O(log n) = O(4)\n",
+      "All approaches match: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case: x = 2, n = 0, M = 1000\n",
+      "=====================================\n",
+      "Approach 1 (Loop):      1 | Verify: 2^0 mod 1000\n",
+      "Approach 2 (Fast):      1 | Time: O(log n) = O(0)\n",
+      "Approach 3 (Recursive): 1 | Time: O(log n) = O(0)\n",
+      "All approaches match: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case: x = 100, n = 100, M = 13\n",
+      "=====================================\n",
+      "Approach 1 (Loop):      9 | Verify: 100^100 mod 13\n",
+      "Approach 2 (Fast):      9 | Time: O(log n) = O(6)\n",
+      "Approach 3 (Recursive): 9 | Time: O(log n) = O(6)\n",
+      "All approaches match: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Performance Analysis:\n",
+      "=====================================\n",
+      "For x=2, n=1000000, M=1000000007:\n",
+      "Approach 1 (Loop):      Too slow for n=10^6 ✗\n",
+      "Approach 2 (Fast):      235042059 ✓ (very fast)\n",
+      "Approach 3 (Recursive): 235042059 ✓ (fast but uses stack)\n",
+      "\n",
+      "Conclusion: Fast Exponentiation (Approach 2) is best for large n!\n"
      ]
     }
    ],
    "source": [
     "Solution sol;\n",
     "\n",
-    "    // Test cases\n",
-    "    int testCases[][3] = {\n",
-    "        {2, 10, 1000},   // 2^10 % 1000\n",
-    "        {3, 7, 13},      // 3^7 % 13\n",
-    "        {10, 5, 17},     // 10^5 % 17\n",
-    "        {5, 20, 100},    // 5^20 % 100\n",
-    "    };\n",
+    "// Test cases: {x, n, M}\n",
+    "int testCases[][3] = {\n",
+    "    {2, 10, 1000},   // 2^10 % 1000 = 1024 % 1000 = 24\n",
+    "    {3, 7, 13},      // 3^7 % 13 = 2187 % 13 = 12\n",
+    "    {10, 5, 17},     // 10^5 % 17 = 100000 % 17 = 7\n",
+    "    {5, 20, 100},    // 5^20 % 100\n",
+    "    {7, 15, 29},     // 7^15 % 29\n",
+    "    {2, 0, 1000},    // 2^0 = 1 (edge case)\n",
+    "    {100, 100, 13},  // Large exponent test\n",
+    "};\n",
     "\n",
-    "    int size = sizeof(testCases) / sizeof(testCases[0]);\n",
+    "int size = sizeof(testCases) / sizeof(testCases[0]);\n",
     "\n",
-    "    for (int i = 0; i < size; i++) {\n",
-    "        int x = testCases[i][0];\n",
-    "        int n = testCases[i][1];\n",
-    "        int M = testCases[i][2];\n",
+    "for (int i = 0; i < size; i++) {\n",
+    "    int x = testCases[i][0];\n",
+    "    int n = testCases[i][1];\n",
+    "    int M = testCases[i][2];\n",
     "\n",
-    "        cout << \"Test case: x = \" << x << \", n = \" << n << \", M = \" << M << endl;\n",
-    "        cout << \"Result using Loop: \" << sol.powModLoop(x, n, M) << endl;\n",
-    "        cout << \"Result using Fast Exponentiation: \" << sol.powModFast(x, n, M) << endl;\n",
-    "        cout << \"-------------------------\" << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    cout << \"Test case: x = \" << x << \", n = \" << n << \", M = \" << M << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    \n",
+    "    // Approach 2: Simple Loop (skip if n is too large for efficiency)\n",
+    "    if (n <= 10000) {\n",
+    "        int res1 = sol.powModLoop(x, n, M);\n",
+    "        cout << \"Approach 1 (Loop):      \" << res1;\n",
+    "        cout << \" | Verify: \" << x << \"^\" << n << \" mod \" << M << endl;\n",
+    "    } else {\n",
+    "        cout << \"Approach 1 (Loop):      Skipped (n too large)\" << endl;\n",
     "    }\n",
+    "    \n",
+    "    // Approach 1: Fast Exponentiation (Iterative)\n",
+    "    int res2 = sol.powModFast(x, n, M);\n",
+    "    cout << \"Approach 2 (Fast):      \" << res2;\n",
+    "    cout << \" | Time: O(log n) = O(\" << (int)log2(n + 1) << \")\" << endl;\n",
+    "    \n",
+    "    // Approach 3: Recursive Fast Exponentiation\n",
+    "    int res3 = sol.powModRecursive(x, n, M);\n",
+    "    cout << \"Approach 3 (Recursive): \" << res3;\n",
+    "    cout << \" | Time: O(log n) = O(\" << (int)log2(n + 1) << \")\" << endl;\n",
+    "    \n",
+    "    // Verification: all methods should return same result\n",
+    "    bool allMatch = (n > 10000) ? (res2 == res3) : (res2 == res3 && res2 == sol.powModLoop(x, n, M));\n",
+    "    cout << \"All approaches match: \" << (allMatch ? \"✓\" : \"✗\") << endl;\n",
+    "    cout << endl;\n",
+    "}\n",
     "\n",
-    "    return 0;"
+    "// Performance comparison\n",
+    "cout << \"=====================================\" << endl;\n",
+    "cout << \"Performance Analysis:\" << endl;\n",
+    "cout << \"=====================================\" << endl;\n",
+    "cout << \"For x=2, n=1000000, M=1000000007:\" << endl;\n",
+    "\n",
+    "int x = 2, n = 1000000, M = 1000000007;\n",
+    "\n",
+    "cout << \"Approach 1 (Loop):      Too slow for n=10^6 ✗\" << endl;\n",
+    "\n",
+    "int resFast = sol.powModFast(x, n, M);\n",
+    "cout << \"Approach 2 (Fast):      \" << resFast << \" ✓ (very fast)\" << endl;\n",
+    "\n",
+    "int resRec = sol.powModRecursive(x, n, M);\n",
+    "cout << \"Approach 3 (Recursive): \" << resRec << \" ✓ (fast but uses stack)\" << endl;\n",
+    "\n",
+    "cout << \"\\nConclusion: Fast Exponentiation (Approach 2) is best for large n!\" << endl;"
    ]
   }
  ],
