--- a/Notebooks/1_Math/1_BasciOperation/704112_MultiplicationTable.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/704112_MultiplicationTable.ipynb
@@ -2,53 +2,94 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "b27b3f21-66c3-4a8a-8379-a7737a426b9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include<iostream>\n",
-    "#include<vector>\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
    "metadata": {},
    "source": [
     "Solution:\n",
     "\n",
     "---\n",
-    "- Name Solution: Using Loop\n",
-    "- Idead: Generate multiplication table of n from 1 to 10\n",
-    "- Time: O(10) ≈ O(1)\n",
-    "- Space: O(10) ≈ O(1)\n",
+    "- Problem: Generate Multiplication Table\n",
+    "- Idea:\n",
+    "    - Given an integer n, generate its multiplication table from 1 to 10.\n",
+    "    - Approach 1 (Using Loop):\n",
+    "        - Iterate from 1 to 10\n",
+    "        - For each i, compute n * i and store in result vector\n",
+    "        - Return the vector containing all products\n",
+    "    - Approach 2 (Using Recursion):\n",
+    "        - Use recursive function to build the multiplication table\n",
+    "        - Base case: when multiplier reaches 11, return empty vector\n",
+    "        - Recursive case: add n * multiplier to result and recurse with multiplier + 1\n",
+    "    - Approach 3 (Using Array Initialization):\n",
+    "        - Pre-calculate all 10 values in a single initialization\n",
+    "        - Use initializer list or array to store results\n",
+    "        - Convert to vector and return\n",
+    "- Time:\n",
+    "    + Approach 1: O(10) ≈ O(1) — fixed 10 iterations\n",
+    "    + Approach 2: O(10) ≈ O(1) — 10 recursive calls\n",
+    "    + Approach 3: O(10) ≈ O(1) — direct calculation\n",
+    "- Space:\n",
+    "    + Approach 1: O(10) ≈ O(1) — result vector of size 10\n",
+    "    + Approach 2: O(10) ≈ O(1) — result vector + O(10) call stack\n",
+    "    + Approach 3: O(10) ≈ O(1) — result vector of size 10a\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "60930cf8-6f9a-4734-9718-ae4fd6ebb123",
+   "execution_count": 1,
+   "id": "57a3e1f7-2ccd-4398-b800-3bc0630c22b6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
-    "public: \n",
-    "    vector<int> getTable(int n) {\n",
+    "public:  \n",
+    "    // ---------- Approach 1: Using Loop ----------\n",
+    "    vector<int> getTable_Loop(int n) {\n",
     "        vector<int> result;\n",
     "        for (int i = 1; i <= 10; i++) {\n",
     "            result.push_back(n * i);\n",
     "        }\n",
+    "        return result;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Helper function for Approach 2 ----------\n",
+    "    void getTableRecursive(int n, int multiplier, vector<int>& result) {\n",
+    "        // Base case: stop when multiplier exceeds 10\n",
+    "        if (multiplier > 10) {\n",
+    "            return;\n",
+    "        }\n",
+    "        // Add current product to result\n",
+    "        result.push_back(n * multiplier);\n",
+    "        // Recursive call with next multiplier\n",
+    "        getTableRecursive(n, multiplier + 1, result);\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 2: Using Recursion ----------\n",
+    "    vector<int> getTable_Recursive(int n) {\n",
+    "        vector<int> result;\n",
+    "        getTableRecursive(n, 1, result);\n",
+    "        return result;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 3: Using Array Initialization ----------\n",
+    "    vector<int> getTable_ArrayInit(int n) {\n",
+    "        // Direct initialization with pre-calculated values\n",
+    "        vector<int> result = {\n",
+    "            n * 1,\n",
+    "            n * 2,\n",
+    "            n * 3,\n",
+    "            n * 4,\n",
+    "            n * 5,\n",
+    "            n * 6,\n",
+    "            n * 7,\n",
+    "            n * 8,\n",
+    "            n * 9,\n",
+    "            n * 10\n",
+    "        };\n",
     "        return result;\n",
     "    }\n",
     "};"
@@ -64,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "89a6e5b9-0feb-4347-afe1-125b288d8d3d",
    "metadata": {},
    "outputs": [
@@ -72,63 +113,267 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Multiplication table of 2:\n",
-      "2 x 1 = 2\n",
-      "2 x 2 = 4\n",
-      "2 x 3 = 6\n",
-      "2 x 4 = 8\n",
-      "2 x 5 = 10\n",
-      "2 x 6 = 12\n",
-      "2 x 7 = 14\n",
-      "2 x 8 = 16\n",
-      "2 x 9 = 18\n",
-      "2 x 10 = 20\n",
-      "-------------------------\n",
-      "Multiplication table of 5:\n",
-      "5 x 1 = 5\n",
-      "5 x 2 = 10\n",
-      "5 x 3 = 15\n",
-      "5 x 4 = 20\n",
-      "5 x 5 = 25\n",
-      "5 x 6 = 30\n",
-      "5 x 7 = 35\n",
-      "5 x 8 = 40\n",
-      "5 x 9 = 45\n",
-      "5 x 10 = 50\n",
-      "-------------------------\n",
-      "Multiplication table of 10:\n",
-      "10 x 1 = 10\n",
-      "10 x 2 = 20\n",
-      "10 x 3 = 30\n",
-      "10 x 4 = 40\n",
-      "10 x 5 = 50\n",
-      "10 x 6 = 60\n",
-      "10 x 7 = 70\n",
-      "10 x 8 = 80\n",
-      "10 x 9 = 90\n",
-      "10 x 10 = 100\n",
-      "-------------------------\n"
+      "=====================================\n",
+      "Multiplication table of 2\n",
+      "=====================================\n",
+      "Approach 1 (Loop):\n",
+      "  2 x 1 = 2\n",
+      "  2 x 2 = 4\n",
+      "  2 x 3 = 6\n",
+      "  2 x 4 = 8\n",
+      "  2 x 5 = 10\n",
+      "  2 x 6 = 12\n",
+      "  2 x 7 = 14\n",
+      "  2 x 8 = 16\n",
+      "  2 x 9 = 18\n",
+      "  2 x 10 = 20\n",
+      "\n",
+      "Approach 2 (Recursive):\n",
+      "  2 x 1 = 2\n",
+      "  2 x 2 = 4\n",
+      "  2 x 3 = 6\n",
+      "  2 x 4 = 8\n",
+      "  2 x 5 = 10\n",
+      "  2 x 6 = 12\n",
+      "  2 x 7 = 14\n",
+      "  2 x 8 = 16\n",
+      "  2 x 9 = 18\n",
+      "  2 x 10 = 20\n",
+      "\n",
+      "Approach 3 (Array Init):\n",
+      "  2 x 1 = 2\n",
+      "  2 x 2 = 4\n",
+      "  2 x 3 = 6\n",
+      "  2 x 4 = 8\n",
+      "  2 x 5 = 10\n",
+      "  2 x 6 = 12\n",
+      "  2 x 7 = 14\n",
+      "  2 x 8 = 16\n",
+      "  2 x 9 = 18\n",
+      "  2 x 10 = 20\n",
+      "\n",
+      "Verify: All approaches agree ✓\n",
+      "\n",
+      "=====================================\n",
+      "Multiplication table of 5\n",
+      "=====================================\n",
+      "Approach 1 (Loop):\n",
+      "  5 x 1 = 5\n",
+      "  5 x 2 = 10\n",
+      "  5 x 3 = 15\n",
+      "  5 x 4 = 20\n",
+      "  5 x 5 = 25\n",
+      "  5 x 6 = 30\n",
+      "  5 x 7 = 35\n",
+      "  5 x 8 = 40\n",
+      "  5 x 9 = 45\n",
+      "  5 x 10 = 50\n",
+      "\n",
+      "Approach 2 (Recursive):\n",
+      "  5 x 1 = 5\n",
+      "  5 x 2 = 10\n",
+      "  5 x 3 = 15\n",
+      "  5 x 4 = 20\n",
+      "  5 x 5 = 25\n",
+      "  5 x 6 = 30\n",
+      "  5 x 7 = 35\n",
+      "  5 x 8 = 40\n",
+      "  5 x 9 = 45\n",
+      "  5 x 10 = 50\n",
+      "\n",
+      "Approach 3 (Array Init):\n",
+      "  5 x 1 = 5\n",
+      "  5 x 2 = 10\n",
+      "  5 x 3 = 15\n",
+      "  5 x 4 = 20\n",
+      "  5 x 5 = 25\n",
+      "  5 x 6 = 30\n",
+      "  5 x 7 = 35\n",
+      "  5 x 8 = 40\n",
+      "  5 x 9 = 45\n",
+      "  5 x 10 = 50\n",
+      "\n",
+      "Verify: All approaches agree ✓\n",
+      "\n",
+      "=====================================\n",
+      "Multiplication table of 10\n",
+      "=====================================\n",
+      "Approach 1 (Loop):\n",
+      "  10 x 1 = 10\n",
+      "  10 x 2 = 20\n",
+      "  10 x 3 = 30\n",
+      "  10 x 4 = 40\n",
+      "  10 x 5 = 50\n",
+      "  10 x 6 = 60\n",
+      "  10 x 7 = 70\n",
+      "  10 x 8 = 80\n",
+      "  10 x 9 = 90\n",
+      "  10 x 10 = 100\n",
+      "\n",
+      "Approach 2 (Recursive):\n",
+      "  10 x 1 = 10\n",
+      "  10 x 2 = 20\n",
+      "  10 x 3 = 30\n",
+      "  10 x 4 = 40\n",
+      "  10 x 5 = 50\n",
+      "  10 x 6 = 60\n",
+      "  10 x 7 = 70\n",
+      "  10 x 8 = 80\n",
+      "  10 x 9 = 90\n",
+      "  10 x 10 = 100\n",
+      "\n",
+      "Approach 3 (Array Init):\n",
+      "  10 x 1 = 10\n",
+      "  10 x 2 = 20\n",
+      "  10 x 3 = 30\n",
+      "  10 x 4 = 40\n",
+      "  10 x 5 = 50\n",
+      "  10 x 6 = 60\n",
+      "  10 x 7 = 70\n",
+      "  10 x 8 = 80\n",
+      "  10 x 9 = 90\n",
+      "  10 x 10 = 100\n",
+      "\n",
+      "Verify: All approaches agree ✓\n",
+      "\n",
+      "=====================================\n",
+      "Multiplication table of 13\n",
+      "=====================================\n",
+      "Approach 1 (Loop):\n",
+      "  13 x 1 = 13\n",
+      "  13 x 2 = 26\n",
+      "  13 x 3 = 39\n",
+      "  13 x 4 = 52\n",
+      "  13 x 5 = 65\n",
+      "  13 x 6 = 78\n",
+      "  13 x 7 = 91\n",
+      "  13 x 8 = 104\n",
+      "  13 x 9 = 117\n",
+      "  13 x 10 = 130\n",
+      "\n",
+      "Approach 2 (Recursive):\n",
+      "  13 x 1 = 13\n",
+      "  13 x 2 = 26\n",
+      "  13 x 3 = 39\n",
+      "  13 x 4 = 52\n",
+      "  13 x 5 = 65\n",
+      "  13 x 6 = 78\n",
+      "  13 x 7 = 91\n",
+      "  13 x 8 = 104\n",
+      "  13 x 9 = 117\n",
+      "  13 x 10 = 130\n",
+      "\n",
+      "Approach 3 (Array Init):\n",
+      "  13 x 1 = 13\n",
+      "  13 x 2 = 26\n",
+      "  13 x 3 = 39\n",
+      "  13 x 4 = 52\n",
+      "  13 x 5 = 65\n",
+      "  13 x 6 = 78\n",
+      "  13 x 7 = 91\n",
+      "  13 x 8 = 104\n",
+      "  13 x 9 = 117\n",
+      "  13 x 10 = 130\n",
+      "\n",
+      "Verify: All approaches agree ✓\n",
+      "\n",
+      "=====================================\n",
+      "Performance & Use Case Notes:\n",
+      "=====================================\n",
+      "• Approach 1 (Loop) - RECOMMENDED\n",
+      "  ✓ Most readable and maintainable\n",
+      "  ✓ Easy to modify range (1-10)\n",
+      "  ✓ Standard practice\n",
+      "\n",
+      "• Approach 2 (Recursive) - EDUCATIONAL\n",
+      "  ✓ Demonstrates recursion concept\n",
+      "  ✗ Extra stack space overhead\n",
+      "  ✗ Overkill for simple iteration\n",
+      "\n",
+      "• Approach 3 (Array Init) - FASTEST\n",
+      "  ✓ No loop overhead\n",
+      "  ✓ Direct memory initialization\n",
+      "  ✗ Hard to modify range\n",
+      "  ✗ Not scalable for variable ranges\n"
      ]
     }
    ],
    "source": [
     "Solution sol;\n",
     "\n",
-    "    // Test cases\n",
-    "    int testCases[] = {2, 5, 10};\n",
-    "    int size = sizeof(testCases) / sizeof(testCases[0]);\n",
+    "// Test cases\n",
+    "int testCases[] = {2, 5, 10, 13};\n",
+    "int size = sizeof(testCases) / sizeof(testCases[0]);\n",
     "\n",
-    "    for (int i = 0; i < size; i++) {\n",
-    "        int n = testCases[i];\n",
-    "        cout << \"Multiplication table of \" << n << \":\" << endl;\n",
-    "        vector<int> table = sol.getTable(n);\n",
-    "        for (int j = 0; j < table.size(); j++) {\n",
-    "            cout << n << \" x \" << j + 1 << \" = \" << table[j] << endl;\n",
-    "        }\n",
-    "        cout << \"-------------------------\" << endl;\n",
+    "for (int i = 0; i < size; i++) {\n",
+    "    int n = testCases[i];\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    cout << \"Multiplication table of \" << n << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    \n",
+    "    // Approach 1: Loop\n",
+    "    cout << \"Approach 1 (Loop):\" << endl;\n",
+    "    vector<int> table1 = sol.getTable_Loop(n);\n",
+    "    for (int j = 0; j < table1.size(); j++) {\n",
+    "        cout << \"  \" << n << \" x \" << j + 1 << \" = \" << table1[j] << endl;\n",
     "    }\n",
+    "    cout << endl;\n",
+    "    \n",
+    "    // Approach 2: Recursive\n",
+    "    cout << \"Approach 2 (Recursive):\" << endl;\n",
+    "    vector<int> table2 = sol.getTable_Recursive(n);\n",
+    "    for (int j = 0; j < table2.size(); j++) {\n",
+    "        cout << \"  \" << n << \" x \" << j + 1 << \" = \" << table2[j] << endl;\n",
+    "    }\n",
+    "    cout << endl;\n",
+    "    \n",
+    "    // Approach 3: Array Initialization\n",
+    "    cout << \"Approach 3 (Array Init):\" << endl;\n",
+    "    vector<int> table3 = sol.getTable_ArrayInit(n);\n",
+    "    for (int j = 0; j < table3.size(); j++) {\n",
+    "        cout << \"  \" << n << \" x \" << j + 1 << \" = \" << table3[j] << endl;\n",
+    "    }\n",
+    "    cout << endl;\n",
+    "    \n",
+    "    // Verify all approaches give the same result\n",
+    "    bool allMatch = true;\n",
+    "    for (int j = 0; j < 10; j++) {\n",
+    "        if (table1[j] != table2[j] || table2[j] != table3[j]) {\n",
+    "            allMatch = false;\n",
+    "            break;\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    if (allMatch) {\n",
+    "        cout << \"Verify: All approaches agree ✓\" << endl;\n",
+    "    } else {\n",
+    "        cout << \"Verify: Mismatch detected! ✗\" << endl;\n",
+    "    }\n",
+    "    \n",
+    "    cout << endl;\n",
+    "}\n",
     "\n",
-    "    return 0;"
+    "// Performance comparison\n",
+    "cout << \"=====================================\" << endl;\n",
+    "cout << \"Performance & Use Case Notes:\" << endl;\n",
+    "cout << \"=====================================\" << endl;\n",
+    "cout << \"• Approach 1 (Loop) - RECOMMENDED\" << endl;\n",
+    "cout << \"  ✓ Most readable and maintainable\" << endl;\n",
+    "cout << \"  ✓ Easy to modify range (1-10)\" << endl;\n",
+    "cout << \"  ✓ Standard practice\" << endl;\n",
+    "cout << endl;\n",
+    "cout << \"• Approach 2 (Recursive) - EDUCATIONAL\" << endl;\n",
+    "cout << \"  ✓ Demonstrates recursion concept\" << endl;\n",
+    "cout << \"  ✗ Extra stack space overhead\" << endl;\n",
+    "cout << \"  ✗ Overkill for simple iteration\" << endl;\n",
+    "cout << endl;\n",
+    "cout << \"• Approach 3 (Array Init) - FASTEST\" << endl;\n",
+    "cout << \"  ✓ No loop overhead\" << endl;\n",
+    "cout << \"  ✓ Direct memory initialization\" << endl;\n",
+    "cout << \"  ✗ Hard to modify range\" << endl;\n",
+    "cout << \"  ✗ Not scalable for variable ranges\" << endl;\n",
+    "\n",
+    "return 0;"
    ]
   }
  ],
