--- a/Notebooks/1_Math/1_BasciOperation/704133_Thediceproblem.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/704133_Thediceproblem.ipynb
@@ -2,51 +2,96 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "15e9b7f5-85e9-463f-95e5-36b34bb14bca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include<iostream>\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
    "metadata": {},
    "source": [
     "Solution:\n",
     "\n",
     "---\n",
-    "- Solution Name: Opposite Face of Dice\n",
+    "- Problem: Opposite Face of Dice\n",
     "- Idea:\n",
-    "   - In a standard 6-faced dice, the sum of opposite faces is always 7.\n",
-    "   - Therefore, the opposite face of a given number n can be found using 7 - n.\n",
-    "- Time: O(1), single subtraction operation\n",
-    "- Space: O(1), no extra memory used\n",
+    "    - In a standard 6-faced dice, the sum of opposite faces is always 7.\n",
+    "    - Given a face value (1-6), find its opposite face.\n",
+    "    \n",
+    "    - Approach 1 (Mathematical Formula):\n",
+    "        - Use the property: opposite_face = 7 - n\n",
+    "        - Direct calculation, most efficient\n",
+    "        \n",
+    "    - Approach 2 (Array/Lookup Table):\n",
+    "        - Pre-define a mapping array where index represents face value\n",
+    "        - opposites[n] gives the opposite face of n\n",
+    "        - Trade space for explicit clarity\n",
+    "        \n",
+    "    - Approach 3 (HashMap/Dictionary):\n",
+    "        - Use unordered_map to store face-to-opposite mappings\n",
+    "        - Most flexible for non-standard dice configurations\n",
+    "        - Can be extended easily for custom dice rules\n",
+    "        \n",
+    "- Time:\n",
+    "    + Approach 1: O(1) — single arithmetic operation\n",
+    "    + Approach 2: O(1) — direct array access\n",
+    "    + Approach 3: O(1) — average case hash table lookup\n",
+    "    \n",
+    "- Space:\n",
+    "    + Approach 1: O(1) — no extra memory\n",
+    "    + Approach 2: O(1) — fixed size array (7 elements)\n",
+    "    + Approach 3: O(1) — fixed size hash map (6 key-value pairs)\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2313c29d-d78d-47aa-89b8-793a8fd4f225",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "#include <unordered_map>\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
-    "public:\n",
-    "    int oppositeFaceOfDice(int n) {\n",
+    "public:    \n",
+    "    // ---------- Approach 1: Mathematical Formula ----------\n",
+    "    int oppositeFaceOfDice_Formula(int n) {\n",
+    "        // Validate input\n",
+    "        if (n < 1 || n > 6) return -1; // invalid face\n",
     "        return 7 - n;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 2: Array Lookup Table ----------\n",
+    "    int oppositeFaceOfDice_Array(int n) {\n",
+    "        // opposites[i] = opposite face of face i\n",
+    "        // Index 0 is unused for clarity (dice faces are 1-6)\n",
+    "        static const int opposites[] = {0, 6, 5, 4, 3, 2, 1};\n",
+    "        \n",
+    "        // Validate input\n",
+    "        if (n < 1 || n > 6) return -1; // invalid face\n",
+    "        \n",
+    "        return opposites[n];\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 3: HashMap ----------\n",
+    "    int oppositeFaceOfDice_HashMap(int n) {\n",
+    "        // Static map initialized once\n",
+    "        static const unordered_map<int, int> oppositeMap = {\n",
+    "            {1, 6}, {2, 5}, {3, 4},\n",
+    "            {4, 3}, {5, 2}, {6, 1}\n",
+    "        };\n",
+    "        \n",
+    "        // Check if face exists in map\n",
+    "        auto it = oppositeMap.find(n);\n",
+    "        if (it != oppositeMap.end()) {\n",
+    "            return it->second;\n",
+    "        }\n",
+    "        \n",
+    "        return -1; // invalid face\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Bonus: Validate dice face ----------\n",
+    "    bool isValidDiceFace(int n) {\n",
+    "        return n >= 1 && n <= 6;\n",
     "    }\n",
     "};"
    ]
@@ -61,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "67a30451-86c0-4e50-9aad-9c04245b5420",
    "metadata": {},
    "outputs": [
@@ -69,42 +114,146 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=====================================\n",
       "Test case n = 1\n",
-      "Opposite face: 6\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Formula):  6 | Sum = 7 | Verify: ✓\n",
+      "Approach 2 (Array):    6 | Sum = 7 | Verify: ✓\n",
+      "Approach 3 (HashMap):  6 | Sum = 7 | Verify: ✓\n",
+      "Valid dice face? Yes\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 2\n",
-      "Opposite face: 5\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Formula):  5 | Sum = 7 | Verify: ✓\n",
+      "Approach 2 (Array):    5 | Sum = 7 | Verify: ✓\n",
+      "Approach 3 (HashMap):  5 | Sum = 7 | Verify: ✓\n",
+      "Valid dice face? Yes\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 3\n",
-      "Opposite face: 4\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Formula):  4 | Sum = 7 | Verify: ✓\n",
+      "Approach 2 (Array):    4 | Sum = 7 | Verify: ✓\n",
+      "Approach 3 (HashMap):  4 | Sum = 7 | Verify: ✓\n",
+      "Valid dice face? Yes\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 4\n",
-      "Opposite face: 3\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Formula):  3 | Sum = 7 | Verify: ✓\n",
+      "Approach 2 (Array):    3 | Sum = 7 | Verify: ✓\n",
+      "Approach 3 (HashMap):  3 | Sum = 7 | Verify: ✓\n",
+      "Valid dice face? Yes\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 5\n",
-      "Opposite face: 2\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Formula):  2 | Sum = 7 | Verify: ✓\n",
+      "Approach 2 (Array):    2 | Sum = 7 | Verify: ✓\n",
+      "Approach 3 (HashMap):  2 | Sum = 7 | Verify: ✓\n",
+      "Valid dice face? Yes\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 6\n",
-      "Opposite face: 1\n",
-      "-------------------------\n"
+      "=====================================\n",
+      "Approach 1 (Formula):  1 | Sum = 7 | Verify: ✓\n",
+      "Approach 2 (Array):    1 | Sum = 7 | Verify: ✓\n",
+      "Approach 3 (HashMap):  1 | Sum = 7 | Verify: ✓\n",
+      "Valid dice face? Yes\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 0\n",
+      "=====================================\n",
+      "Approach 1 (Formula):  Invalid face value!\n",
+      "Approach 2 (Array):    Invalid face value!\n",
+      "Approach 3 (HashMap):  Invalid face value!\n",
+      "Valid dice face? No\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 7\n",
+      "=====================================\n",
+      "Approach 1 (Formula):  Invalid face value!\n",
+      "Approach 2 (Array):    Invalid face value!\n",
+      "Approach 3 (HashMap):  Invalid face value!\n",
+      "Valid dice face? No\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = -1\n",
+      "=====================================\n",
+      "Approach 1 (Formula):  Invalid face value!\n",
+      "Approach 2 (Array):    Invalid face value!\n",
+      "Approach 3 (HashMap):  Invalid face value!\n",
+      "Valid dice face? No\n",
+      "\n",
+      "=====================================\n",
+      "All Opposite Face Pairs:\n",
+      "=====================================\n",
+      "Face 1 ↔ Face 6 (Sum: 7)\n",
+      "Face 2 ↔ Face 5 (Sum: 7)\n",
+      "Face 3 ↔ Face 4 (Sum: 7)\n",
+      "Face 4 ↔ Face 3 (Sum: 7)\n",
+      "Face 5 ↔ Face 2 (Sum: 7)\n",
+      "Face 6 ↔ Face 1 (Sum: 7)\n"
      ]
     }
    ],
    "source": [
-    "    Solution sol;\n",
+    "Solution sol;\n",
     "\n",
-    "    // Test cases\n",
-    "    int testCases[] = {1, 2, 3, 4, 5, 6};\n",
-    "    int size = sizeof(testCases) / sizeof(testCases[0]);\n",
+    "// Test cases including edge cases\n",
+    "vector<int> testCases = {1, 2, 3, 4, 5, 6, 0, 7, -1};\n",
     "\n",
-    "    for (int i = 0; i < size; i++) {\n",
-    "        int n = testCases[i];\n",
-    "        cout << \"Test case n = \" << n << endl;\n",
-    "        cout << \"Opposite face: \" << sol.oppositeFaceOfDice(n) << endl;\n",
-    "        cout << \"-------------------------\" << endl;\n",
+    "for (int n : testCases) {\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    cout << \"Test case n = \" << n << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    \n",
+    "    // Approach 1: Formula\n",
+    "    int res1 = sol.oppositeFaceOfDice_Formula(n);\n",
+    "    if (res1 != -1) {\n",
+    "        cout << \"Approach 1 (Formula):  \" << res1;\n",
+    "        cout << \" | Sum = \" << (n + res1) << \" | Verify: \" \n",
+    "             << ((n + res1 == 7) ? \"✓\" : \"✗\") << endl;\n",
+    "    } else {\n",
+    "        cout << \"Approach 1 (Formula):  Invalid face value!\" << endl;\n",
     "    }\n",
+    "    \n",
+    "    // Approach 2: Array\n",
+    "    int res2 = sol.oppositeFaceOfDice_Array(n);\n",
+    "    if (res2 != -1) {\n",
+    "        cout << \"Approach 2 (Array):    \" << res2;\n",
+    "        cout << \" | Sum = \" << (n + res2) << \" | Verify: \" \n",
+    "             << ((n + res2 == 7) ? \"✓\" : \"✗\") << endl;\n",
+    "    } else {\n",
+    "        cout << \"Approach 2 (Array):    Invalid face value!\" << endl;\n",
+    "    }\n",
+    "    \n",
+    "    // Approach 3: HashMap\n",
+    "    int res3 = sol.oppositeFaceOfDice_HashMap(n);\n",
+    "    if (res3 != -1) {\n",
+    "        cout << \"Approach 3 (HashMap):  \" << res3;\n",
+    "        cout << \" | Sum = \" << (n + res3) << \" | Verify: \" \n",
+    "             << ((n + res3 == 7) ? \"✓\" : \"✗\") << endl;\n",
+    "    } else {\n",
+    "        cout << \"Approach 3 (HashMap):  Invalid face value!\" << endl;\n",
+    "    }\n",
+    "    \n",
+    "    // Validation check\n",
+    "    cout << \"Valid dice face? \" << (sol.isValidDiceFace(n) ? \"Yes\" : \"No\") << endl;\n",
+    "    \n",
+    "    cout << endl;\n",
+    "}\n",
     "\n",
-    "    return 0;"
+    "// Additional demonstration: all pairs\n",
+    "cout << \"=====================================\" << endl;\n",
+    "cout << \"All Opposite Face Pairs:\" << endl;\n",
+    "cout << \"=====================================\" << endl;\n",
+    "for (int i = 1; i <= 6; i++) {\n",
+    "    int opposite = sol.oppositeFaceOfDice_Formula(i);\n",
+    "    cout << \"Face \" << i << \" ↔ Face \" << opposite \n",
+    "         << \" (Sum: \" << (i + opposite) << \")\" << endl;\n",
+    "}"
    ]
   }
  ],
