--- a/Notebooks/1_Math/1_BasciOperation/704434_NearestPerfectSquare.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/704434_NearestPerfectSquare.ipynb
@@ -2,62 +2,124 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "45fd9271-0a63-4a9d-90fa-00093cf54b71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include <iostream>\n",
-    "#include <vector>\n",
-    "#include <cmath> // for sqrt and abs\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
    "metadata": {},
    "source": [
     "Solution:\n",
     "\n",
     "---\n",
-    "- Solution Name: Using Square Root\n",
-    "- Idea: \n",
-    "    1. Compute the integer square root of n.\n",
-    "    2. Find the perfect squares just below and above n.\n",
-    "    3. Compare which one is closer to n and return that square along with the difference.\n",
-    "    This avoids checking all numbers and computes the result directly in constant time.\n",
-    "- Time: O(1), only a few arithmetic operations and sqrt\n",
-    "- Space: O(1), no extra memory used\n",
+    "- Problem: Find Nearest Perfect Square and Its Difference\n",
+    "- Idea: Given an integer n, find the perfect square closest to n and return [square, difference].\n",
+    "    - Approach 1 (Square Root Method):\n",
+    "        - Compute the integer square root of n\n",
+    "        - Find the perfect squares just below and above n\n",
+    "        - Compare which one is closer to n and return that square with the difference\n",
+    "        - This avoids checking all numbers and computes result directly in constant time\n",
+    "    - Approach 2 (Binary Search):\n",
+    "        - Use binary search to find the perfect square closest to n\n",
+    "        - Search in range [0, n] for a number k where k*k is closest to n\n",
+    "        - More efficient for very large numbers where sqrt might lose precision\n",
+    "    - Approach 3 (Brute Force):\n",
+    "        - Iterate from 0 upward, computing squares until exceeding n\n",
+    "        - Compare the last two squares to find the closest one\n",
+    "        - Simple but slower for large n\n",
+    "- Time:\n",
+    "    + Approach 1: O(1) — only a few arithmetic operations and sqrt\n",
+    "    + Approach 2: O(log n) — binary search over the range [0, n]\n",
+    "    + Approach 3: O(√n) — iterate from 0 to √n\n",
+    "- Space:\n",
+    "    + Approach 1: O(1) — no extra memory used\n",
+    "    + Approach 2/3: O(1) — only a few variables\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "63254d75-9b20-4124-a586-3e7d15550ffb",
+   "execution_count": 1,
+   "id": "4e40789e-8d8e-4b85-a75d-bef494196afa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution {\n",
-    "public:\n",
-    "    vector<int> squareDifference(int n) {\n",
-    "        int root = (int)sqrt(n);\n",
-    "        int square1 = root * root;            \n",
-    "        int square2 = (root + 1) * (root + 1);\n",
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "#include <cmath> // for sqrt and abs\n",
+    "using namespace std;\n",
     "\n",
+    "class Solution {\n",
+    "public:   \n",
+    "    // ---------- Approach 1: Using Square Root (Optimal) ----------\n",
+    "    vector<int> squareDifference_SqrtMethod(int n) {\n",
+    "        if (n < 0) return {0, abs(n)}; // edge case: negative number\n",
+    "        \n",
+    "        int root = (int)sqrt(n);\n",
+    "        int square1 = root * root;            // Perfect square below or equal to n\n",
+    "        int square2 = (root + 1) * (root + 1); // Perfect square above n\n",
+    "        \n",
+    "        // Compare distances and return the closer one\n",
     "        if (abs(n - square1) <= abs(square2 - n)) {\n",
     "            return {square1, abs(n - square1)};\n",
     "        } else {\n",
     "            return {square2, abs(n - square2)};\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 2: Using Binary Search ----------\n",
+    "    vector<int> squareDifference_BinarySearch(int n) {\n",
+    "        if (n < 0) return {0, abs(n)}; // edge case: negative number\n",
+    "        if (n == 0) return {0, 0};     // edge case: n = 0\n",
+    "        \n",
+    "        long long left = 0, right = n;\n",
+    "        long long bestSquare = 0;\n",
+    "        \n",
+    "        // Binary search to find the square root\n",
+    "        while (left <= right) {\n",
+    "            long long mid = left + (right - left) / 2;\n",
+    "            long long square = mid * mid;\n",
+    "            \n",
+    "            if (square == n) {\n",
+    "                return {(int)square, 0}; // Exact match\n",
+    "            } else if (square < n) {\n",
+    "                bestSquare = square;\n",
+    "                left = mid + 1;\n",
+    "            } else {\n",
+    "                right = mid - 1;\n",
+    "            }\n",
+    "        }\n",
+    "        \n",
+    "        // Compare the square below and above n\n",
+    "        long long square1 = bestSquare;\n",
+    "        long long root = (long long)sqrt(square1);\n",
+    "        long long square2 = (root + 1) * (root + 1);\n",
+    "        \n",
+    "        if (abs(n - square1) <= abs(square2 - n)) {\n",
+    "            return {(int)square1, abs(n - (int)square1)};\n",
+    "        } else {\n",
+    "            return {(int)square2, abs((int)square2 - n)};\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 3: Brute Force Iteration ----------\n",
+    "    vector<int> squareDifference_BruteForce(int n) {\n",
+    "        if (n < 0) return {0, abs(n)}; // edge case: negative number\n",
+    "        if (n == 0) return {0, 0};     // edge case: n = 0\n",
+    "        \n",
+    "        int i = 0;\n",
+    "        int prevSquare = 0;\n",
+    "        int currSquare = 0;\n",
+    "        \n",
+    "        // Iterate until we exceed n\n",
+    "        while (currSquare <= n) {\n",
+    "            prevSquare = currSquare;\n",
+    "            i++;\n",
+    "            currSquare = i * i;\n",
+    "        }\n",
+    "        \n",
+    "        // Now prevSquare <= n < currSquare\n",
+    "        // Compare distances\n",
+    "        if (abs(n - prevSquare) <= abs(currSquare - n)) {\n",
+    "            return {prevSquare, abs(n - prevSquare)};\n",
+    "        } else {\n",
+    "            return {currSquare, abs(currSquare - n)};\n",
     "        }\n",
     "    }\n",
     "};"
@@ -73,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2297806f-d360-4c09-a9ff-cf1985caa065",
    "metadata": {},
    "outputs": [
@@ -81,48 +143,113 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n = 10\n",
-      "Nearest square: 9\n",
-      "Difference: 1\n",
-      "-------------------------\n",
-      "n = 15\n",
-      "Nearest square: 16\n",
-      "Difference: 1\n",
-      "-------------------------\n",
-      "n = 26\n",
-      "Nearest square: 25\n",
-      "Difference: 1\n",
-      "-------------------------\n",
-      "n = 50\n",
-      "Nearest square: 49\n",
-      "Difference: 1\n",
-      "-------------------------\n",
-      "n = 86\n",
-      "Nearest square: 81\n",
-      "Difference: 5\n",
-      "-------------------------\n",
-      "n = 100\n",
-      "Nearest square: 100\n",
-      "Difference: 0\n",
-      "-------------------------\n"
+      "=====================================\n",
+      "Test case n = 10\n",
+      "=====================================\n",
+      "Approach 1 (Sqrt):        Nearest square = 9 | Difference = 1 | Verify: 9 ± 1 = 10 ✓\n",
+      "Approach 2 (Binary):      Nearest square = 9 | Difference = 1 | Verify: 9 ± 1 = 10 ✓\n",
+      "Approach 3 (BruteForce):  Nearest square = 9 | Difference = 1 | Verify: 9 ± 1 = 10 ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 15\n",
+      "=====================================\n",
+      "Approach 1 (Sqrt):        Nearest square = 16 | Difference = 1 | Verify: 16 ± 1 = 15 ✓\n",
+      "Approach 2 (Binary):      Nearest square = 16 | Difference = 1 | Verify: 16 ± 1 = 15 ✓\n",
+      "Approach 3 (BruteForce):  Nearest square = 16 | Difference = 1 | Verify: 16 ± 1 = 15 ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 26\n",
+      "=====================================\n",
+      "Approach 1 (Sqrt):        Nearest square = 25 | Difference = 1 | Verify: 25 ± 1 = 26 ✓\n",
+      "Approach 2 (Binary):      Nearest square = 25 | Difference = 1 | Verify: 25 ± 1 = 26 ✓\n",
+      "Approach 3 (BruteForce):  Nearest square = 25 | Difference = 1 | Verify: 25 ± 1 = 26 ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 50\n",
+      "=====================================\n",
+      "Approach 1 (Sqrt):        Nearest square = 49 | Difference = 1 | Verify: 49 ± 1 = 50 ✓\n",
+      "Approach 2 (Binary):      Nearest square = 49 | Difference = 1 | Verify: 49 ± 1 = 50 ✓\n",
+      "Approach 3 (BruteForce):  Nearest square = 49 | Difference = 1 | Verify: 49 ± 1 = 50 ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 86\n",
+      "=====================================\n",
+      "Approach 1 (Sqrt):        Nearest square = 81 | Difference = 5 | Verify: 81 ± 5 = 86 ✓\n",
+      "Approach 2 (Binary):      Nearest square = 81 | Difference = 5 | Verify: 81 ± 5 = 86 ✓\n",
+      "Approach 3 (BruteForce):  Nearest square = 81 | Difference = 5 | Verify: 81 ± 5 = 86 ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 100\n",
+      "=====================================\n",
+      "Approach 1 (Sqrt):        Nearest square = 100 | Difference = 0 | Verify: 100 ± 0 = 100 ✓\n",
+      "Approach 2 (Binary):      Nearest square = 100 | Difference = 0 | Verify: 100 ± 0 = 100 ✓\n",
+      "Approach 3 (BruteForce):  Nearest square = 100 | Difference = 0 | Verify: 100 ± 0 = 100 ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 1\n",
+      "=====================================\n",
+      "Approach 1 (Sqrt):        Nearest square = 1 | Difference = 0 | Verify: 1 ± 0 = 1 ✓\n",
+      "Approach 2 (Binary):      Nearest square = 1 | Difference = 0 | Verify: 1 ± 0 = 1 ✓\n",
+      "Approach 3 (BruteForce):  Nearest square = 1 | Difference = 0 | Verify: 1 ± 0 = 1 ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 0\n",
+      "=====================================\n",
+      "Approach 1 (Sqrt):        Nearest square = 0 | Difference = 0 | Verify: 0 ± 0 = 0 ✓\n",
+      "Approach 2 (Binary):      Nearest square = 0 | Difference = 0 | Verify: 0 ± 0 = 0 ✓\n",
+      "Approach 3 (BruteForce):  Nearest square = 0 | Difference = 0 | Verify: 0 ± 0 = 0 ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 144\n",
+      "=====================================\n",
+      "Approach 1 (Sqrt):        Nearest square = 144 | Difference = 0 | Verify: 144 ± 0 = 144 ✓\n",
+      "Approach 2 (Binary):      Nearest square = 144 | Difference = 0 | Verify: 144 ± 0 = 144 ✓\n",
+      "Approach 3 (BruteForce):  Nearest square = 144 | Difference = 0 | Verify: 144 ± 0 = 144 ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 1000\n",
+      "=====================================\n",
+      "Approach 1 (Sqrt):        Nearest square = 1024 | Difference = 24 | Verify: 1024 ± 24 = 1000 ✓\n",
+      "Approach 2 (Binary):      Nearest square = 1024 | Difference = 24 | Verify: 1024 ± 24 = 1000 ✓\n",
+      "Approach 3 (BruteForce):  Nearest square = 1024 | Difference = 24 | Verify: 1024 ± 24 = 1000 ✓\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "Solution sol;\n",
     "\n",
-    "    // Test cases\n",
-    "    vector<int> testCases = {10, 15, 26, 50, 86, 100};\n",
+    "// Test cases\n",
+    "vector<int> testCases = {10, 15, 26, 50, 86, 100, 1, 0, 144, 1000};\n",
     "\n",
-    "    for (int n : testCases) {\n",
-    "        vector<int> result = sol.squareDifference(n);\n",
-    "        cout << \"n = \" << n << endl;\n",
-    "        cout << \"Nearest square: \" << result[0] << endl;\n",
-    "        cout << \"Difference: \" << result[1] << endl;\n",
-    "        cout << \"-------------------------\" << endl;\n",
-    "    }\n",
-    "\n",
-    "    return 0;"
+    "for (int n : testCases) {\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    cout << \"Test case n = \" << n << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    \n",
+    "    // Approach 1: Square Root Method\n",
+    "    vector<int> res1 = sol.squareDifference_SqrtMethod(n);\n",
+    "    cout << \"Approach 1 (Sqrt):        Nearest square = \" << res1[0] \n",
+    "         << \" | Difference = \" << res1[1];\n",
+    "    cout << \" | Verify: \" << res1[0] << \" ± \" << res1[1] << \" = \" << n \n",
+    "         << (abs(res1[0] - n) == res1[1] || abs(res1[0] + res1[1]) == n ? \" ✓\" : \" ✗\") << endl;\n",
+    "    \n",
+    "    // Approach 2: Binary Search\n",
+    "    vector<int> res2 = sol.squareDifference_BinarySearch(n);\n",
+    "    cout << \"Approach 2 (Binary):      Nearest square = \" << res2[0] \n",
+    "         << \" | Difference = \" << res2[1];\n",
+    "    cout << \" | Verify: \" << res2[0] << \" ± \" << res2[1] << \" = \" << n \n",
+    "         << (abs(res2[0] - n) == res2[1] || abs(res2[0] + res2[1]) == n ? \" ✓\" : \" ✗\") << endl;\n",
+    "    \n",
+    "    // Approach 3: Brute Force\n",
+    "    vector<int> res3 = sol.squareDifference_BruteForce(n);\n",
+    "    cout << \"Approach 3 (BruteForce):  Nearest square = \" << res3[0] \n",
+    "         << \" | Difference = \" << res3[1];\n",
+    "    cout << \" | Verify: \" << res3[0] << \" ± \" << res3[1] << \" = \" << n \n",
+    "         << (abs(res3[0] - n) == res3[1] || abs(res3[0] + res3[1]) == n ? \" ✓\" : \" ✗\") << endl;\n",
+    "    \n",
+    "    cout << endl;\n",
+    "}"
    ]
   }
  ],
