--- a/Notebooks/1_Math/1_BasciOperation/704497_Paircubecount.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/704497_Paircubecount.ipynb
@@ -2,83 +2,125 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "66c64e87-bf1e-4618-8644-3677f3dafdd1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include <iostream>\n",
-    "#include <cmath> // for cbrt\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
    "metadata": {},
    "source": [
     "Solution\n",
     "\n",
     "---\n",
-    "- Method 1:\n",
-    "  - Solution Name: Brute Force Approach\n",
-    "  - Idea:\n",
-    "     - Check all possible pairs (a, b) such that a^3 + b^3 == n.\n",
-    "     - This guarantees finding all valid pairs but is not efficient for large n.\n",
-    "  - Time: O(N^2), as it checks every possible pair (a, b)\n",
-    "  - Space: O(1), only a counter variable is used\n",
-    "--- \n",
-    "- Method 2:\n",
-    "  - Solution Name: Optimized Using Cube Root\n",
-    "  - Idea: Iterate only up to cbrt(n) for a. For each a, check if n - a^3 is a perfect cube (b^3). This reduces unnecessary iterations.\n",
-    "  - Time: O(cbrt(N)), because the loop runs only up to cube root of n\n",
-    "  - Space: O(1), no extra memory except a few variables\n",
+    "- Problem: Count Pair Cubes\n",
+    "- Idea:\n",
+    "    - Given an integer n, count how many pairs (a, b) exist such that a³ + b³ = n\n",
+    "    - Approach 1 (Brute Force):\n",
+    "        - Check all possible pairs (a, b) where a, b <= n\n",
+    "        - For each pair, verify if a³ + b³ == n\n",
+    "        - Simple but very inefficient for large n\n",
+    "    - Approach 2 (Optimized Using Cube Root):\n",
+    "        - Iterate only up to ∛n for a\n",
+    "        - For each a, calculate diff = n - a³\n",
+    "        - Check if diff is a perfect cube (b³)\n",
+    "        - Much more efficient than brute force\n",
+    "    - Approach 3 (Two Pointers):\n",
+    "        - Use two pointers: left starting at 0, right starting at ∛n\n",
+    "        - Calculate sum = left³ + right³\n",
+    "        - If sum == n, count it; if sum < n, move left++; if sum > n, move right--\n",
+    "        - Most efficient approach with early termination\n",
+    "- Time:\n",
+    "    + Approach 1: O(n²) — checks every possible pair\n",
+    "    + Approach 2: O(∛n) — iterates up to cube root only\n",
+    "    + Approach 3: O(∛n) — two pointers with single pass\n",
+    "- Space:\n",
+    "    + Approach 1: O(1) — only counter variable\n",
+    "    + Approach 2: O(1) — only few variables\n",
+    "    + Approach 3: O(1) — only pointer variables\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ae17ff1b-60b3-4c9c-b8b9-26344dfba08f",
+   "execution_count": 1,
+   "id": "3ce708c0-d55a-434e-bec9-e7379fb28310",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "#include <cmath>\n",
+    "#include <vector>\n",
+    "#include <unordered_set>\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
     "public:\n",
-    "    // Method 1:\n",
+    "    // ---------- Approach 1: Brute Force ----------\n",
     "    int pairCubeCountBrute(int n) {\n",
+    "        if (n < 0) return 0; // edge case\n",
+    "        \n",
     "        int count = 0;\n",
-    "        for (int a = 0; a <= n; a++) {\n",
-    "            for (int b = 0; b <= n; b++) {\n",
-    "                if (a * a * a + b * b * b == n)\n",
+    "        int limit = cbrt(n) + 1; // Optimization: no need to check beyond cube root\n",
+    "        \n",
+    "        for (int a = 0; a <= limit; a++) {\n",
+    "            for (int b = 0; b <= limit; b++) {\n",
+    "                long long sum = (long long)a * a * a + (long long)b * b * b;\n",
+    "                if (sum == n) {\n",
     "                    count++;\n",
+    "                }\n",
+    "                if (sum > n) break; // Early termination\n",
     "            }\n",
     "        }\n",
     "        return count;\n",
     "    }\n",
     "\n",
-    "    // Method 2:\n",
+    "    // ---------- Helper function for Approach 2 & 3 ----------\n",
+    "    bool isPerfectCube(long long n) {\n",
+    "        if (n < 0) return false;\n",
+    "        long long cubeRoot = round(cbrt(n));\n",
+    "        return cubeRoot * cubeRoot * cubeRoot == n;\n",
+    "    }\n",
+    "\n",
+    "    // ---------- Approach 2: Optimized Using Cube Root ----------\n",
     "    int pairCubeCountOptimized(int n) {\n",
+    "        if (n < 0) return 0; // edge case\n",
+    "        \n",
     "        int count = 0;\n",
+    "        int limit = cbrt(n) + 1;\n",
     "\n",
     "        // Iterate through all possible cubes up to cbrt(n)\n",
-    "        for (int a = 1; a <= cbrt(n); a++) {\n",
-    "            int cubeA = a * a * a;\n",
-    "            int diff = n - cubeA;\n",
+    "        for (int a = 0; a <= limit; a++) {\n",
+    "            long long cubeA = (long long)a * a * a;\n",
+    "            long long diff = n - cubeA;\n",
     "\n",
-    "            int b = cbrt(diff);\n",
-    "            if (b * b * b == diff) {\n",
+    "            // Check if diff is a perfect cube\n",
+    "            if (diff >= 0 && isPerfectCube(diff)) {\n",
     "                count++;\n",
     "            }\n",
     "        }\n",
+    "\n",
+    "        return count;\n",
+    "    }\n",
+    "\n",
+    "    // ---------- Approach 3: Hash Set (Most Efficient) ----------\n",
+    "    int pairCubeCountHashSet(int n) {\n",
+    "        if (n < 0) return 0; // edge case\n",
+    "        \n",
+    "        int count = 0;\n",
+    "        int limit = cbrt(n) + 1;\n",
+    "        unordered_set<long long> cubeSet;\n",
+    "\n",
+    "        // Store all cubes up to limit in hash set\n",
+    "        for (int i = 0; i <= limit; i++) {\n",
+    "            cubeSet.insert((long long)i * i * i);\n",
+    "        }\n",
+    "\n",
+    "        // For each cube, check if (n - cube) exists in set\n",
+    "        for (int a = 0; a <= limit; a++) {\n",
+    "            long long cubeA = (long long)a * a * a;\n",
+    "            long long diff = n - cubeA;\n",
+    "            \n",
+    "            if (diff >= 0 && cubeSet.count(diff)) {\n",
+    "                count++;\n",
+    "            }\n",
+    "        }\n",
+    "\n",
     "        return count;\n",
     "    }\n",
     "};"
@@ -94,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ccb617d0-9ab3-482a-890b-1d2a046250c2",
    "metadata": {},
    "outputs": [
@@ -102,41 +144,135 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=====================================\n",
       "Test case n = 9\n",
-      "Brute Force Count: 2\n",
-      "Optimized Count: 2\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Brute Force):    2 pair(s)\n",
+      "Approach 2 (Optimized):      2 pair(s)\n",
+      "Approach 3 (Hash Set):       2 pair(s)\n",
+      "All approaches match:        ✓\n",
+      "\n",
+      "Actual pairs for n = 9:\n",
+      "  1³ + 2³ = 1 + 8 = 9\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 28\n",
-      "Brute Force Count: 2\n",
-      "Optimized Count: 2\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Brute Force):    2 pair(s)\n",
+      "Approach 2 (Optimized):      2 pair(s)\n",
+      "Approach 3 (Hash Set):       2 pair(s)\n",
+      "All approaches match:        ✓\n",
+      "\n",
+      "Actual pairs for n = 28:\n",
+      "  1³ + 3³ = 1 + 27 = 28\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 35\n",
-      "Brute Force Count: 2\n",
-      "Optimized Count: 2\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Brute Force):    2 pair(s)\n",
+      "Approach 2 (Optimized):      2 pair(s)\n",
+      "Approach 3 (Hash Set):       2 pair(s)\n",
+      "All approaches match:        ✓\n",
+      "\n",
+      "Actual pairs for n = 35:\n",
+      "  2³ + 3³ = 8 + 27 = 35\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 1729\n",
-      "Brute Force Count: 4\n",
-      "Optimized Count: 4\n",
-      "-------------------------\n"
+      "=====================================\n",
+      "Approach 1 (Brute Force):    4 pair(s)\n",
+      "Approach 2 (Optimized):      4 pair(s)\n",
+      "Approach 3 (Hash Set):       4 pair(s)\n",
+      "All approaches match:        ✓\n",
+      "\n",
+      "Actual pairs for n = 1729:\n",
+      "  1³ + 12³ = 1 + 1728 = 1729\n",
+      "  9³ + 10³ = 729 + 1000 = 1729\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 4104\n",
+      "=====================================\n",
+      "Approach 1 (Brute Force):    4 pair(s)\n",
+      "Approach 2 (Optimized):      4 pair(s)\n",
+      "Approach 3 (Hash Set):       4 pair(s)\n",
+      "All approaches match:        ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 13832\n",
+      "=====================================\n",
+      "Approach 1 (Brute Force):    4 pair(s)\n",
+      "Approach 2 (Optimized):      4 pair(s)\n",
+      "Approach 3 (Hash Set):       4 pair(s)\n",
+      "All approaches match:        ✓\n",
+      "\n",
+      "=====================================\n",
+      "📚 Fun Fact about 1729:\n",
+      "=====================================\n",
+      "1729 is known as the Hardy-Ramanujan number,\n",
+      "the smallest number expressible as the sum of\n",
+      "two cubes in two different ways!\n",
+      "1³ + 12³ = 1729\n",
+      "9³ + 10³ = 1729\n"
      ]
     }
    ],
    "source": [
-    "    Solution sol;\n",
+    "Solution sol;\n",
     "\n",
-    "    // Test cases\n",
-    "    int testCases[] = {9, 28, 35, 1729};  // 1729 is famous Ramanujan number\n",
-    "    int size = sizeof(testCases) / sizeof(testCases[0]);\n",
+    "// Test cases\n",
+    "vector<int> testCases = {9, 28, 35, 1729, 4104, 13832};  \n",
+    "// 1729 = Ramanujan number (Hardy-Ramanujan number)\n",
+    "// 4104 = 2³ + 16³ = 9³ + 15³\n",
+    "// 13832 = 2³ + 24³ = 18³ + 20³\n",
     "\n",
-    "    for (int i = 0; i < size; i++) {\n",
-    "        int n = testCases[i];\n",
-    "        cout << \"Test case n = \" << n << endl;\n",
-    "        cout << \"Brute Force Count: \" << sol.pairCubeCountBrute(n) << endl;\n",
-    "        cout << \"Optimized Count: \" << sol.pairCubeCountOptimized(n) << endl;\n",
-    "        cout << \"-------------------------\" << endl;\n",
+    "for (int n : testCases) {\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    cout << \"Test case n = \" << n << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    \n",
+    "    // Approach 1: Brute Force\n",
+    "    int count1 = sol.pairCubeCountBrute(n);\n",
+    "    cout << \"Approach 1 (Brute Force):    \" << count1 << \" pair(s)\" << endl;\n",
+    "    \n",
+    "    // Approach 2: Optimized\n",
+    "    int count2 = sol.pairCubeCountOptimized(n);\n",
+    "    cout << \"Approach 2 (Optimized):      \" << count2 << \" pair(s)\" << endl;\n",
+    "    \n",
+    "    // Approach 3: Hash Set\n",
+    "    int count3 = sol.pairCubeCountHashSet(n);\n",
+    "    cout << \"Approach 3 (Hash Set):       \" << count3 << \" pair(s)\" << endl;\n",
+    "    \n",
+    "    // Verify all approaches give same result\n",
+    "    bool allMatch = (count1 == count2 && count2 == count3);\n",
+    "    cout << \"All approaches match:        \" << (allMatch ? \"✓\" : \"✗\") << endl;\n",
+    "    \n",
+    "    // Show the actual pairs for small numbers\n",
+    "    if (n <= 1729) {\n",
+    "        cout << \"\\nActual pairs for n = \" << n << \":\" << endl;\n",
+    "        int limit = cbrt(n) + 1;\n",
+    "        for (int a = 0; a <= limit; a++) {\n",
+    "            for (int b = a; b <= limit; b++) {\n",
+    "                long long sum = (long long)a * a * a + (long long)b * b * b;\n",
+    "                if (sum == n) {\n",
+    "                    cout << \"  \" << a << \"³ + \" << b << \"³ = \" \n",
+    "                         << (a*a*a) << \" + \" << (b*b*b) << \" = \" << n << endl;\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
     "    }\n",
+    "    \n",
+    "    cout << endl;\n",
+    "}\n",
     "\n",
-    "    return 0;"
+    "// Special note about Ramanujan number\n",
+    "cout << \"=====================================\" << endl;\n",
+    "cout << \"📚 Fun Fact about 1729:\" << endl;\n",
+    "cout << \"=====================================\" << endl;\n",
+    "cout << \"1729 is known as the Hardy-Ramanujan number,\" << endl;\n",
+    "cout << \"the smallest number expressible as the sum of\" << endl;\n",
+    "cout << \"two cubes in two different ways!\" << endl;\n",
+    "cout << \"1³ + 12³ = 1729\" << endl;\n",
+    "cout << \"9³ + 10³ = 1729\" << endl;"
    ]
   }
  ],
