--- a/Notebooks/1_Math/1_BasciOperation/704620_Swaptwonumbers.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/704620_Swaptwonumbers.ipynb
@@ -2,67 +2,55 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "8bc03a9b-2811-495b-b350-a1352485a3e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include<iostream>\n",
-    "#include<vector>\n",
-    "#include<utility> // Using std::pair và std::swap\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
+   "id": "ff992157-ce8f-4718-991c-10fb72eef8bc",
    "metadata": {},
    "source": [
     "Solution:\n",
     "\n",
     "---\n",
-    "- Method 1:\n",
-    "  - Solution Name: Swap using temporary variable\n",
-    "  - Idea:\n",
-    "    - Use a temporary variable to hold one value while swapping the two numbers.\n",
-    "    - This is the classic and safe method for swapping.\n",
-    "  - Time: O(1)\n",
-    "  - Space: O(1)\n",
-    "---\n",
-    "- Method 2:\n",
-    "     - Solution Name: Swap using addition & subtraction\n",
-    "    - Idea:\n",
-    "        - Swap two numbers without a temporary variable by using arithmetic operations.\n",
-    "        - Be careful of integer overflow in some languages.\n",
-    "    - Time: O(1)\n",
-    "    - Space: O(1)\n",
-    "---\n",
-    "- Method 3:\n",
-    "    - Name Solution: Built-in Swap\n",
-    "    - Idea: Use the language's built-in swap function (e.g., std::swap in C++) for readability and safety.\n",
-    "    - Time: O(1)\n",
-    "    - Space: O(1)\n",
+    "- Problem: Swap Two Numbers\n",
+    "- Idea:\n",
+    "    - Given two integers, swap their values using different methods.\n",
+    "    - Approach 1 (Temporary variable):\n",
+    "        - Use a temporary variable to hold one value while swapping\n",
+    "        - This is the classic, safe, and most readable method\n",
+    "    - Approach 2 (Addition & Subtraction):\n",
+    "        - Swap without temporary variable using arithmetic operations\n",
+    "        - Formula: a = a + b, b = a - b, a = a - b\n",
+    "        - Caution: May cause integer overflow for large values\n",
+    "    - Approach 3 (XOR bitwise):\n",
+    "        - Use XOR properties: x ^ x = 0, x ^ 0 = x\n",
+    "        - Formula: a = a ^ b, b = a ^ b, a = a ^ b\n",
+    "        - No overflow issue, works for all integers\n",
+    "    - Approach 4 (Multiplication & Division):\n",
+    "        - Similar to addition method but using multiplication\n",
+    "        - Caution: Cannot use if either number is 0, may cause overflow\n",
+    "    - Approach 5 (Built-in Swap):\n",
+    "        - Use std::swap for best practice in production code\n",
+    "        - Most readable and optimized by compiler\n",
+    "- Time:\n",
+    "    + All approaches: O(1) — constant time operations\n",
+    "- Space:\n",
+    "    + Approach 1: O(1) — one temporary variable\n",
+    "    + Approaches 2-5: O(1) — no extra space needed\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "13526826-a7e0-42b0-9cb1-544aaad0ee19",
+   "execution_count": 1,
+   "id": "84a90fc3-2620-4fcd-b616-ecf7b205a4f7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "#include <utility> // để dùng std::pair và std::swap\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
-    "public: \n",
-    "    // Method 1\n",
+    "public:     \n",
+    "    // ---------- Approach 1: Using temporary variable ----------\n",
     "    pair<int, int> swapUsingTemp(int a, int b) {\n",
     "        int temp = a;\n",
     "        a = b;\n",
@@ -70,16 +58,45 @@
     "        return {a, b};\n",
     "    }\n",
     "\n",
-    "    // Method 2\n",
+    "    // ---------- Approach 2: Using addition & subtraction ----------\n",
     "    pair<int, int> swapUsingMath(int a, int b) {\n",
-    "        a = a + b;\n",
-    "        b = a - b;\n",
-    "        a = a - b;\n",
+    "        // Caution: May overflow with large numbers\n",
+    "        a = a + b;  // a now holds sum\n",
+    "        b = a - b;  // b = (a + b) - b = original a\n",
+    "        a = a - b;  // a = (a + b) - a = original b\n",
     "        return {a, b};\n",
     "    }\n",
-    "\n",
-    "    // Method 3\n",
+    "    \n",
+    "    // ---------- Approach 3: Using XOR bitwise operation ----------\n",
+    "    pair<int, int> swapUsingXOR(int a, int b) {\n",
+    "        // XOR properties: x ^ x = 0, x ^ 0 = x, x ^ y ^ y = x\n",
+    "        // No overflow issue, works for all integers including negative\n",
+    "        if (a == b) return {a, b}; // optimization for same values\n",
+    "        \n",
+    "        a = a ^ b;  // a now holds XOR of both\n",
+    "        b = a ^ b;  // b = (a ^ b) ^ b = a (original)\n",
+    "        a = a ^ b;  // a = (a ^ b) ^ a = b (original)\n",
+    "        return {a, b};\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 4: Using multiplication & division ----------\n",
+    "    pair<int, int> swapUsingMultDiv(int a, int b) {\n",
+    "        // Caution: Cannot use if a or b is 0, may overflow\n",
+    "        if (a == 0 || b == 0) {\n",
+    "            // Fallback to temp method for zero values\n",
+    "            return swapUsingTemp(a, b);\n",
+    "        }\n",
+    "        \n",
+    "        a = a * b;  // a now holds product\n",
+    "        b = a / b;  // b = (a * b) / b = original a\n",
+    "        a = a / b;  // a = (a * b) / a = original b\n",
+    "        return {a, b};\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 5: Using built-in std::swap ----------\n",
     "    pair<int, int> swapUsingBuiltin(int a, int b) {\n",
+    "        // Best practice: Use standard library functions\n",
+    "        // Compiler-optimized, most readable\n",
     "        std::swap(a, b);\n",
     "        return {a, b};\n",
     "    }\n",
@@ -96,10 +113,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cbd36623-e093-4730-abb4-6911bd0f868d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=====================================\n",
+      "Original: a = 2, b = 5\n",
+      "=====================================\n",
+      "Approach 1 (Temp):    a = 5, b = 2 | Verify: ✓\n",
+      "Approach 2 (Math):    a = 5, b = 2 | Verify: ✓\n",
+      "Approach 3 (XOR):     a = 5, b = 2 | Verify: ✓\n",
+      "Approach 4 (Mult/Div): a = 5, b = 2 | Verify: ✓\n",
+      "Approach 5 (Built-in): a = 5, b = 2 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Original: a = 10, b = 20\n",
+      "=====================================\n",
+      "Approach 1 (Temp):    a = 20, b = 10 | Verify: ✓\n",
+      "Approach 2 (Math):    a = 20, b = 10 | Verify: ✓\n",
+      "Approach 3 (XOR):     a = 20, b = 10 | Verify: ✓\n",
+      "Approach 4 (Mult/Div): a = 20, b = 10 | Verify: ✓\n",
+      "Approach 5 (Built-in): a = 20, b = 10 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Original: a = -3, b = 7\n",
+      "=====================================\n",
+      "Approach 1 (Temp):    a = 7, b = -3 | Verify: ✓\n",
+      "Approach 2 (Math):    a = 7, b = -3 | Verify: ✓\n",
+      "Approach 3 (XOR):     a = 7, b = -3 | Verify: ✓\n",
+      "Approach 4 (Mult/Div): a = 7, b = -3 | Verify: ✓\n",
+      "Approach 5 (Built-in): a = 7, b = -3 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Original: a = 100, b = 100\n",
+      "=====================================\n",
+      "Approach 1 (Temp):    a = 100, b = 100 | Verify: ✓\n",
+      "Approach 2 (Math):    a = 100, b = 100 | Verify: ✓\n",
+      "Approach 3 (XOR):     a = 100, b = 100 | Verify: ✓\n",
+      "Approach 4 (Mult/Div): a = 100, b = 100 | Verify: ✓\n",
+      "Approach 5 (Built-in): a = 100, b = 100 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Original: a = 0, b = 42\n",
+      "=====================================\n",
+      "Approach 1 (Temp):    a = 42, b = 0 | Verify: ✓\n",
+      "Approach 2 (Math):    a = 42, b = 0 | Verify: ✓\n",
+      "Approach 3 (XOR):     a = 42, b = 0 | Verify: ✓\n",
+      "Approach 4 (Mult/Div): a = 42, b = 0 | Verify: ✓\n",
+      "Approach 5 (Built-in): a = 42, b = 0 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Original: a = -15, b = -25\n",
+      "=====================================\n",
+      "Approach 1 (Temp):    a = -25, b = -15 | Verify: ✓\n",
+      "Approach 2 (Math):    a = -25, b = -15 | Verify: ✓\n",
+      "Approach 3 (XOR):     a = -25, b = -15 | Verify: ✓\n",
+      "Approach 4 (Mult/Div): a = -25, b = -15 | Verify: ✓\n",
+      "Approach 5 (Built-in): a = -25, b = -15 | Verify: ✓\n",
+      "\n",
+      "=====================================\n",
+      "Original: a = 1000000, b = 2000000\n",
+      "=====================================\n",
+      "Approach 1 (Temp):    a = 2000000, b = 1000000 | Verify: ✓\n",
+      "Approach 2 (Math):    a = 2000000, b = 1000000 | Verify: ✓\n",
+      "Approach 3 (XOR):     a = 2000000, b = 1000000 | Verify: ✓\n",
+      "Approach 4 (Mult/Div): a = 2001045, b = -727 | Verify: ✗\n",
+      "Approach 5 (Built-in): a = 2000000, b = 1000000 | Verify: ✓\n",
+      "\n",
+      "========================================\n",
+      "RECOMMENDATION:\n",
+      "========================================\n",
+      "✓ Best for production: Approach 5 (Built-in std::swap)\n",
+      "  - Most readable and maintainable\n",
+      "  - Compiler-optimized\n",
+      "  - No edge cases to worry about\n",
+      "\n",
+      "✓ Educational value: Approach 3 (XOR)\n",
+      "  - No overflow issues\n",
+      "  - Works for all integer values\n",
+      "  - Common interview question\n",
+      "\n",
+      "⚠ Avoid in practice: Approaches 2 & 4\n",
+      "  - Risk of integer overflow\n",
+      "  - Less readable\n",
+      "  - No real benefit over other methods\n",
+      "========================================\n"
+     ]
+    }
+   ],
    "source": [
     "Solution sol;\n",
     "\n",
@@ -107,31 +212,67 @@
     "vector<pair<int, int>> testCases = {\n",
     "    {2, 5},\n",
     "    {10, 20},\n",
-    "    {-3, 7}\n",
+    "    {-3, 7},\n",
+    "    {100, 100},      // same values\n",
+    "    {0, 42},         // one zero\n",
+    "    {-15, -25},      // both negative\n",
+    "    {1000000, 2000000} // large numbers\n",
     "};\n",
     "\n",
     "for (auto &tc : testCases) {\n",
     "    int a = tc.first, b = tc.second;\n",
     "\n",
+    "    cout << \"=====================================\" << endl;\n",
     "    cout << \"Original: a = \" << a << \", b = \" << b << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
     "\n",
     "    // 1. Swap using temp\n",
     "    auto res1 = sol.swapUsingTemp(a, b);\n",
-    "    cout << \"Swap using temp: a = \" << res1.first << \", b = \" << res1.second << endl;\n",
+    "    cout << \"Approach 1 (Temp):    a = \" << res1.first << \", b = \" << res1.second;\n",
+    "    cout << \" | Verify: \" << (res1.first == b && res1.second == a ? \"✓\" : \"✗\") << endl;\n",
     "\n",
     "    // 2. Swap using math\n",
     "    auto res2 = sol.swapUsingMath(a, b);\n",
-    "    cout << \"Swap using math: a = \" << res2.first << \", b = \" << res2.second << endl;\n",
+    "    cout << \"Approach 2 (Math):    a = \" << res2.first << \", b = \" << res2.second;\n",
+    "    cout << \" | Verify: \" << (res2.first == b && res2.second == a ? \"✓\" : \"✗\") << endl;\n",
     "\n",
-    "    // 3. Swap using built-in std::swap\n",
-    "    int x = a, y = b;\n",
-    "    swap(x, y);\n",
-    "    cout << \"Swap using std::swap: a = \" << x << \", b = \" << y << endl;\n",
+    "    // 3. Swap using XOR\n",
+    "    auto res3 = sol.swapUsingXOR(a, b);\n",
+    "    cout << \"Approach 3 (XOR):     a = \" << res3.first << \", b = \" << res3.second;\n",
+    "    cout << \" | Verify: \" << (res3.first == b && res3.second == a ? \"✓\" : \"✗\") << endl;\n",
     "\n",
-    "    cout << \"-------------------------\" << endl;\n",
+    "    // 4. Swap using multiplication/division\n",
+    "    auto res4 = sol.swapUsingMultDiv(a, b);\n",
+    "    cout << \"Approach 4 (Mult/Div): a = \" << res4.first << \", b = \" << res4.second;\n",
+    "    cout << \" | Verify: \" << (res4.first == b && res4.second == a ? \"✓\" : \"✗\") << endl;\n",
+    "\n",
+    "    // 5. Swap using built-in std::swap\n",
+    "    auto res5 = sol.swapUsingBuiltin(a, b);\n",
+    "    cout << \"Approach 5 (Built-in): a = \" << res5.first << \", b = \" << res5.second;\n",
+    "    cout << \" | Verify: \" << (res5.first == b && res5.second == a ? \"✓\" : \"✗\") << endl;\n",
+    "\n",
+    "    cout << endl;\n",
     "}\n",
     "\n",
-    "return 0;"
+    "// Performance note\n",
+    "cout << \"========================================\" << endl;\n",
+    "cout << \"RECOMMENDATION:\" << endl;\n",
+    "cout << \"========================================\" << endl;\n",
+    "cout << \"✓ Best for production: Approach 5 (Built-in std::swap)\" << endl;\n",
+    "cout << \"  - Most readable and maintainable\" << endl;\n",
+    "cout << \"  - Compiler-optimized\" << endl;\n",
+    "cout << \"  - No edge cases to worry about\" << endl;\n",
+    "cout << endl;\n",
+    "cout << \"✓ Educational value: Approach 3 (XOR)\" << endl;\n",
+    "cout << \"  - No overflow issues\" << endl;\n",
+    "cout << \"  - Works for all integer values\" << endl;\n",
+    "cout << \"  - Common interview question\" << endl;\n",
+    "cout << endl;\n",
+    "cout << \"⚠ Avoid in practice: Approaches 2 & 4\" << endl;\n",
+    "cout << \"  - Risk of integer overflow\" << endl;\n",
+    "cout << \"  - Less readable\" << endl;\n",
+    "cout << \"  - No real benefit over other methods\" << endl;\n",
+    "cout << \"========================================\" << endl;"
    ]
   }
  ],
