--- a/Notebooks/1_Math/1_BasciOperation/897411_Divisibleby13.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/897411_Divisibleby13.ipynb
@@ -2,69 +2,93 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "5740e95c-7ac2-45d5-bbfa-4720951ce13e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include<iostream>\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
    "metadata": {},
    "source": [
     "Solution:\n",
     "\n",
     "---\n",
-    "- Method 1:\n",
-    "  - Solution Name: Using built-in stoi() conversion\n",
-    "  - Idea: Convert the string to an integer, then check divisibility by 13\n",
-    "  - Time: O(N)\n",
-    "  - Space: O(1)\n",
-    "---\n",
-    "- Method 2\n",
-    "  - Solution Name: Manual modulus computation\n",
-    "  - Idea:\n",
-    "    - Process each digit one by one and keep track of the modulus\n",
-    "    - This avoids overflow for very large numbers\n",
-    "  - Time: O(N)\n",
-    "  - Space: O(1)\n",
-    " ---"
+    "- Problem: Check if a number (given as string) is divisible by 13\n",
+    "- Idea: Given a string representing a number, determine if it's divisible by 13\n",
+    "    - Approach 1 (Built-in stoi):\n",
+    "        - Convert string to integer using stoi()\n",
+    "        - Check if the number is divisible by 13 using modulo operator\n",
+    "        - Simple but limited by integer overflow (max ~2*10^9)\n",
+    "    - Approach 2 (Manual modulus):\n",
+    "        - Process each digit one by one from left to right\n",
+    "        - Maintain running modulus: mod = (mod * 10 + digit) % 13\n",
+    "        - Works for arbitrarily large numbers (no overflow)\n",
+    "    - Approach 3 (Long long for larger range):\n",
+    "        - Similar to Approach 1 but uses stoll() for long long\n",
+    "        - Handles numbers up to ~9*10^18\n",
+    "        - Trade-off between simplicity and range\n",
+    "- Time:\n",
+    "    + Approach 1: O(N) — stoi conversion is O(N) where N is string length\n",
+    "    + Approach 2: O(N) — iterate through each digit once\n",
+    "    + Approach 3: O(N) — stoll conversion is O(N)\n",
+    "- Space:\n",
+    "    + Approach 1: O(1) — only stores integer result\n",
+    "    + Approach 2: O(1) — only stores modulus value\n",
+    "    + Approach 3: O(1) — only stores long long result\n",
+    "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f394cfe2-7c06-4224-8449-7204579970b1",
+   "execution_count": 1,
+   "id": "101ceb95-dfe1-4a94-8034-098c1555cf17",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "#include <string>\n",
+    "#include <vector>\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
-    "public:\n",
-    "\n",
+    "public:    \n",
+    "    // ---------- Approach 1: Using built-in stoi() conversion ----------\n",
     "    bool divBy13_stoi(const string &s) {\n",
-    "        return stoi(s) % 13 == 0;\n",
+    "        // Note: stoi works for strings representing numbers up to INT_MAX (~2*10^9)\n",
+    "        // Will throw exception for larger numbers or invalid input\n",
+    "        try {\n",
+    "            return stoi(s) % 13 == 0;\n",
+    "        } catch (const out_of_range& e) {\n",
+    "            // For numbers too large for int, fall back to manual method\n",
+    "            return divBy13_manual(s);\n",
+    "        } catch (const invalid_argument& e) {\n",
+    "            return false; // Invalid string format\n",
+    "        }\n",
     "    }\n",
-    "\n",
-    "\n",
+    "    \n",
+    "    // ---------- Approach 2: Manual modulus computation ----------\n",
     "    bool divBy13_manual(const string &s) {\n",
+    "        // Handle empty string or invalid input\n",
+    "        if (s.empty()) return false;\n",
+    "        \n",
     "        int mod = 0;\n",
     "        for (char c : s) {\n",
+    "            // Validate digit\n",
+    "            if (c < '0' || c > '9') return false;\n",
+    "            \n",
     "            int digit = c - '0';\n",
     "            mod = (mod * 10 + digit) % 13;\n",
     "        }\n",
     "        return (mod == 0);\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 3: Using stoll() for larger numbers ----------\n",
+    "    bool divBy13_stoll(const string &s) {\n",
+    "        // stoll works for strings representing numbers up to LLONG_MAX (~9*10^18)\n",
+    "        // Better range than stoi but still limited\n",
+    "        try {\n",
+    "            return stoll(s) % 13 == 0;\n",
+    "        } catch (const out_of_range& e) {\n",
+    "            // For extremely large numbers, fall back to manual method\n",
+    "            return divBy13_manual(s);\n",
+    "        } catch (const invalid_argument& e) {\n",
+    "            return false; // Invalid string format\n",
+    "        }\n",
     "    }\n",
     "};"
    ]
@@ -79,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "93704c31-b29f-4991-9f8e-be5d6b84f5f4",
    "metadata": {},
    "outputs": [
@@ -91,45 +115,66 @@
       "Using stoi: Divisible\n",
       "Using manual modulus: Divisible\n",
       "-------------------------\n",
+      "\n",
       "Test case s = 26\n",
       "Using stoi: Divisible\n",
       "Using manual modulus: Divisible\n",
       "-------------------------\n",
+      "\n",
       "Test case s = 39\n",
       "Using stoi: Divisible\n",
       "Using manual modulus: Divisible\n",
       "-------------------------\n",
+      "\n",
       "Test case s = 52\n",
       "Using stoi: Divisible\n",
       "Using manual modulus: Divisible\n",
       "-------------------------\n",
+      "\n",
       "Test case s = 100\n",
       "Using stoi: Not divisible\n",
       "Using manual modulus: Not divisible\n",
       "-------------------------\n",
+      "\n",
       "Test case s = 169\n",
       "Using stoi: Divisible\n",
       "Using manual modulus: Divisible\n",
-      "-------------------------\n"
+      "-------------------------\n",
+      "\n",
+      "=====================================\n",
+      "Special Test: Extremely Large Number\n",
+      "=====================================\n",
+      "Number: 123456789012345678901234567890\n",
+      "Only manual method can handle this:\n",
+      "Result: Divisible by 13 ✓\n"
      ]
     }
    ],
    "source": [
-    "    Solution sol;\n",
+    "Solution sol;\n",
     "\n",
-    "    // Test cases\n",
-    "    string testCases[] = {\"13\", \"26\", \"39\", \"52\", \"100\", \"169\"};\n",
-    "    int size = sizeof(testCases) / sizeof(testCases[0]);\n",
+    "// Test cases\n",
+    "string testCases[] = {\"13\", \"26\", \"39\", \"52\", \"100\", \"169\"};\n",
+    "int size = sizeof(testCases) / sizeof(testCases[0]);\n",
     "\n",
-    "    for (int i = 0; i < size; i++) {\n",
-    "        string s = testCases[i];\n",
-    "        cout << \"Test case s = \" << s << endl;\n",
-    "        cout << \"Using stoi: \" << (sol.divBy13_stoi(s) ? \"Divisible\" : \"Not divisible\") << endl;\n",
-    "        cout << \"Using manual modulus: \" << (sol.divBy13_manual(s) ? \"Divisible\" : \"Not divisible\") << endl;\n",
-    "        cout << \"-------------------------\" << endl;\n",
-    "    }\n",
+    "for (int i = 0; i < size; i++) {\n",
+    "    string s = testCases[i];\n",
+    "    cout << \"Test case s = \" << s << endl;\n",
+    "    cout << \"Using stoi: \" << (sol.divBy13_stoi(s) ? \"Divisible\" : \"Not divisible\") << endl;\n",
+    "    cout << \"Using manual modulus: \" << (sol.divBy13_manual(s) ? \"Divisible\" : \"Not divisible\") << endl;\n",
+    "    cout << \"-------------------------\" << endl;\n",
     "\n",
-    "    return 0;"
+    "    cout << endl;\n",
+    "}\n",
+    "\n",
+    "// Additional test: Demonstrate manual method's advantage\n",
+    "cout << \"=====================================\" << endl;\n",
+    "cout << \"Special Test: Extremely Large Number\" << endl;\n",
+    "cout << \"=====================================\" << endl;\n",
+    "string hugeNumber = \"123456789012345678901234567890\";\n",
+    "cout << \"Number: \" << hugeNumber << endl;\n",
+    "cout << \"Only manual method can handle this:\" << endl;\n",
+    "cout << \"Result: \" << (sol.divBy13_manual(hugeNumber) ? \"Divisible by 13 ✓\" : \"Not divisible by 13 ✗\") << endl;"
    ]
   }
  ],
