--- a/Notebooks/1_Math/1_BasciOperation/703724_OddorEven.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/703724_OddorEven.ipynb
@@ -2,49 +2,67 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "1020d676-61e2-40c0-92e5-d51156424345",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include<iostream>\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
    "metadata": {},
    "source": [
     "Solution:\n",
     "\n",
     "---\n",
-    "- Name Solution: Using Modulo Operator\n",
-    "- Idead: Using modulo operator - \"%\"\"\n",
-    "- Time: O(1)\n",
-    "- Space: O(1)\n",
+    "- Problem: Check if a number is Even or Odd\n",
+    "- Idea:\n",
+    "    - Given an integer n, determine if it is even or odd.\n",
+    "    - Approach 1 (Modulo Operator):\n",
+    "        - Use the modulo operator (%) to check if n is divisible by 2\n",
+    "        - If n % 2 == 0, then n is even; otherwise, n is odd\n",
+    "    - Approach 2 (Bitwise AND):\n",
+    "        - Use bitwise AND operator with 1 to check the least significant bit\n",
+    "        - If (n & 1) == 0, then n is even; otherwise, n is odd\n",
+    "        - This works because even numbers have LSB = 0, odd numbers have LSB = 1\n",
+    "    - Approach 3 (Division and Multiplication):\n",
+    "        - Divide n by 2 and multiply back by 2\n",
+    "        - If the result equals n, then n is even; otherwise, n is odd\n",
+    "        - Formula: (n / 2) * 2 == n\n",
+    "- Time:\n",
+    "    + Approach 1: O(1) — single modulo operation\n",
+    "    + Approach 2: O(1) — single bitwise operation (faster than modulo)\n",
+    "    + Approach 3: O(1) — two arithmetic operations\n",
+    "- Space:\n",
+    "    + Approach 1: O(1) — no extra space\n",
+    "    + Approach 2: O(1) — no extra space\n",
+    "    + Approach 3: O(1) — no extra space\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "fb33c326-8b11-4b46-93f5-cb77da3010c5",
+   "execution_count": 1,
+   "id": "c4998a35-d9c2-4285-a51c-e3d80a2ceac3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
-    "public: \n",
-    "    bool isEven(int n) {\n",
+    "public:    \n",
+    "    // ---------- Approach 1: Using Modulo Operator ----------\n",
+    "    bool isEven_Modulo(int n) {\n",
     "        return n % 2 == 0;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 2: Using Bitwise AND ----------\n",
+    "    bool isEven_Bitwise(int n) {\n",
+    "        // Check the least significant bit (LSB)\n",
+    "        // Even numbers: LSB = 0, so (n & 1) = 0\n",
+    "        // Odd numbers:  LSB = 1, so (n & 1) = 1\n",
+    "        return (n & 1) == 0;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 3: Using Division and Multiplication ----------\n",
+    "    bool isEven_DivMul(int n) {\n",
+    "        // Integer division by 2, then multiply by 2\n",
+    "        // If result equals n, then n is even\n",
+    "        return (n / 2) * 2 == n;\n",
     "    }\n",
     "};"
    ]
@@ -59,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6d8dbce7-815c-497b-9477-ad9eff65e512",
    "metadata": {},
    "outputs": [
@@ -67,40 +85,154 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=====================================\n",
+      "Test case n = 0\n",
+      "=====================================\n",
+      "Approach 1 (Modulo):  0 is Even\n",
+      "Approach 2 (Bitwise): 0 is Even\n",
+      "Approach 3 (DivMul):  0 is Even\n",
+      "Verify: All approaches agree ✓\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 1\n",
-      "1 is Odd\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Modulo):  1 is Odd\n",
+      "Approach 2 (Bitwise): 1 is Odd\n",
+      "Approach 3 (DivMul):  1 is Odd\n",
+      "Verify: All approaches agree ✓\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 5\n",
-      "5 is Odd\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Modulo):  5 is Odd\n",
+      "Approach 2 (Bitwise): 5 is Odd\n",
+      "Approach 3 (DivMul):  5 is Odd\n",
+      "Verify: All approaches agree ✓\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 10\n",
-      "10 is Even\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Modulo):  10 is Even\n",
+      "Approach 2 (Bitwise): 10 is Even\n",
+      "Approach 3 (DivMul):  10 is Even\n",
+      "Verify: All approaches agree ✓\n",
+      "\n",
+      "=====================================\n",
       "Test case n = 100\n",
-      "100 is Even\n",
-      "-------------------------\n"
+      "=====================================\n",
+      "Approach 1 (Modulo):  100 is Even\n",
+      "Approach 2 (Bitwise): 100 is Even\n",
+      "Approach 3 (DivMul):  100 is Even\n",
+      "Verify: All approaches agree ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = -4\n",
+      "=====================================\n",
+      "Approach 1 (Modulo):  -4 is Even\n",
+      "Approach 2 (Bitwise): -4 is Even\n",
+      "Approach 3 (DivMul):  -4 is Even\n",
+      "Verify: All approaches agree ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = -7\n",
+      "=====================================\n",
+      "Approach 1 (Modulo):  -7 is Odd\n",
+      "Approach 2 (Bitwise): -7 is Odd\n",
+      "Approach 3 (DivMul):  -7 is Odd\n",
+      "Verify: All approaches agree ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 999\n",
+      "=====================================\n",
+      "Approach 1 (Modulo):  999 is Odd\n",
+      "Approach 2 (Bitwise): 999 is Odd\n",
+      "Approach 3 (DivMul):  999 is Odd\n",
+      "Verify: All approaches agree ✓\n",
+      "\n",
+      "=====================================\n",
+      "Test case n = 1000\n",
+      "=====================================\n",
+      "Approach 1 (Modulo):  1000 is Even\n",
+      "Approach 2 (Bitwise): 1000 is Even\n",
+      "Approach 3 (DivMul):  1000 is Even\n",
+      "Verify: All approaches agree ✓\n",
+      "\n",
+      "=====================================\n",
+      "Performance Notes:\n",
+      "=====================================\n",
+      "• Approach 2 (Bitwise) is typically FASTEST\n",
+      "  - Direct bit manipulation\n",
+      "  - CPU-level operation\n",
+      "• Approach 1 (Modulo) is most READABLE\n",
+      "  - Clear intent\n",
+      "  - Standard practice\n",
+      "• Approach 3 (DivMul) is EDUCATIONAL\n",
+      "  - Shows mathematical property\n",
+      "  - Less efficient (two operations)\n"
      ]
     }
    ],
    "source": [
     "Solution sol;\n",
-    "\n",
-    "    // Test cases\n",
-    "    int testCases[] = {1, 5, 10, 100};\n",
+    "    \n",
+    "    // Test cases - including negative numbers and zero\n",
+    "    int testCases[] = {0, 1, 5, 10, 100, -4, -7, 999, 1000};\n",
     "    int size = sizeof(testCases) / sizeof(testCases[0]);\n",
-    "\n",
+    "    \n",
     "    for (int i = 0; i < size; i++) {\n",
     "        int n = testCases[i];\n",
+    "        cout << \"=====================================\" << endl;\n",
     "        cout << \"Test case n = \" << n << endl;\n",
-    "        if (sol.isEven(n)) {\n",
-    "            cout << n << \" is Even\" << endl;\n",
+    "        cout << \"=====================================\" << endl;\n",
+    "        \n",
+    "        // Approach 1: Modulo\n",
+    "        if (sol.isEven_Modulo(n)) {\n",
+    "            cout << \"Approach 1 (Modulo):  \" << n << \" is Even\" << endl;\n",
     "        } else {\n",
-    "            cout << n << \" is Odd\" << endl;\n",
+    "            cout << \"Approach 1 (Modulo):  \" << n << \" is Odd\" << endl;\n",
     "        }\n",
-    "        cout << \"-------------------------\" << endl;\n",
+    "        \n",
+    "        // Approach 2: Bitwise\n",
+    "        if (sol.isEven_Bitwise(n)) {\n",
+    "            cout << \"Approach 2 (Bitwise): \" << n << \" is Even\" << endl;\n",
+    "        } else {\n",
+    "            cout << \"Approach 2 (Bitwise): \" << n << \" is Odd\" << endl;\n",
+    "        }\n",
+    "        \n",
+    "        // Approach 3: Division & Multiplication\n",
+    "        if (sol.isEven_DivMul(n)) {\n",
+    "            cout << \"Approach 3 (DivMul):  \" << n << \" is Even\" << endl;\n",
+    "        } else {\n",
+    "            cout << \"Approach 3 (DivMul):  \" << n << \" is Odd\" << endl;\n",
+    "        }\n",
+    "        \n",
+    "        // Verify all approaches give the same result\n",
+    "        bool result1 = sol.isEven_Modulo(n);\n",
+    "        bool result2 = sol.isEven_Bitwise(n);\n",
+    "        bool result3 = sol.isEven_DivMul(n);\n",
+    "        \n",
+    "        if (result1 == result2 && result2 == result3) {\n",
+    "            cout << \"Verify: All approaches agree ✓\" << endl;\n",
+    "        } else {\n",
+    "            cout << \"Verify: Mismatch detected! ✗\" << endl;\n",
+    "        }\n",
+    "        \n",
+    "        cout << endl;\n",
     "    }\n",
-    "\n",
-    "    return 0;"
+    "    \n",
+    "    // Performance note\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    cout << \"Performance Notes:\" << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    cout << \"• Approach 2 (Bitwise) is typically FASTEST\" << endl;\n",
+    "    cout << \"  - Direct bit manipulation\" << endl;\n",
+    "    cout << \"  - CPU-level operation\" << endl;\n",
+    "    cout << \"• Approach 1 (Modulo) is most READABLE\" << endl;\n",
+    "    cout << \"  - Clear intent\" << endl;\n",
+    "    cout << \"  - Standard practice\" << endl;\n",
+    "    cout << \"• Approach 3 (DivMul) is EDUCATIONAL\" << endl;\n",
+    "    cout << \"  - Shows mathematical property\" << endl;\n",
+    "    cout << \"  - Less efficient (two operations)\" << endl;"
    ]
   }
  ],
