--- a/Notebooks/1_Math/1_BasciOperation/703757_CheckforPower.ipynb
+++ b/Notebooks/1_Math/1_BasciOperation/703757_CheckforPower.ipynb
@@ -2,80 +2,98 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "069b5bed-e6eb-4994-954f-4949c061df16",
-   "metadata": {},
-   "source": [
-    "Library:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "b3f68701-6fe1-425e-838d-87dd9a40cc9c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include<iostream>\n",
-    "#include<vector>\n",
-    "#include<cmath> // for log, fabs, round\n",
-    "using namespace std;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "da93d6c9-8b34-46c4-83ca-ddcf2a2949cd",
    "metadata": {},
    "source": [
     "Solution:\n",
     "\n",
     "---\n",
-    "- Method 1:\n",
-    "  - Solution Name: Division Loop\n",
-    "  - Idea:\n",
-    "    - Keep dividing y by x repeatedly.\n",
-    "    - If y becomes 1 after all divisions, then y is a power of x.\n",
-    "    - Otherwise, it is not. Handles x = 1 as a special case.\n",
-    "    - Example: y = 27, x = 3 -> 27/3=9, 9/3=3, 3/3=1 -> true\n",
-    "  - Time: O(log_y), since y is divided by x until it becomes 1\n",
-    "  - Space: O(1), uses constant extra space\n",
-    "---\n",
-    "- Method 2:\n",
-    "  - Solution Name: Logarithm Method\n",
-    "  - Idea:\n",
-    "     - Use logarithms to check if y is a power of x.\n",
-    "     - If y is a power of x, log(y)/log(x) should be an integer.\n",
-    "     - Floating-point errors are handled by comparing with a small epsilon.\n",
-    "     - Example: log(27)/log(3) ≈ 3 -> true\n",
-    "  - Time: O(1), only computes logarithms\n",
-    "  -  Space: O(1), uses constant extra space\n",
+    "- Problem: Check if Y is a Power of X\n",
+    "- Idea: Given two integers x and y, determine if y is a power of x (i.e., y = x^k for some non-negative integer k).\n",
+    "    - Approach 1 (Division Loop):\n",
+    "        - Keep dividing y by x repeatedly\n",
+    "        - If y becomes 1 after all divisions, then y is a power of x\n",
+    "        - Handles x = 1 as a special case\n",
+    "        - Example: y = 27, x = 3 -> 27/3=9, 9/3=3, 3/3=1 -> true\n",
+    "    - Approach 2 (Logarithm Method):\n",
+    "        - Use logarithms to check if y is a power of x\n",
+    "        - If y is a power of x, log(y)/log(x) should be an integer\n",
+    "        - Floating-point errors are handled by comparing with a small epsilon\n",
+    "        - Example: log(27)/log(3) ≈ 3 -> true\n",
+    "    - Approach 3 (Bit Manipulation & Optimization):\n",
+    "        - For x = 2, use bit manipulation: check if y is power of 2 and y & (y-1) == 0\n",
+    "        - For other x values, use iterative multiplication to avoid division\n",
+    "        - Start with power = 1, multiply by x until power >= y\n",
+    "        - Check if power == y at any step\n",
+    "- Time:\n",
+    "    + Approach 1: O(log_x(y)) — y is divided by x until it becomes 1\n",
+    "    + Approach 2: O(1) — only computes logarithms\n",
+    "    + Approach 3: O(log_x(y)) — multiply until reaching y, but optimized for x=2\n",
+    "- Space: Approach 1/2/3: O(1) — uses constant extra space\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "57e51e56-0454-450b-b7c8-5ad68787317d",
+   "execution_count": 1,
+   "id": "5d550143-dcda-40cf-a282-b28a351f5d62",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#include <iostream>\n",
+    "#include <vector>\n",
+    "#include <cmath> // for log, fabs, round, pow\n",
+    "using namespace std;\n",
+    "\n",
     "class Solution {\n",
-    "public:\n",
-    "    // Method 1\n",
+    "public:   \n",
+    "    // ---------- Approach 1: Division Loop ----------\n",
     "    bool isPowerOfX_Division(int x, int y) {\n",
-    "        if (x == 1) \n",
-    "            return (y == 1);\n",
+    "        // Edge cases\n",
+    "        if (y <= 0) return false;\n",
+    "        if (x == 1) return (y == 1);\n",
+    "        if (x <= 0) return false;\n",
+    "        if (y == 1) return true; // x^0 = 1 for any x > 1\n",
+    "        \n",
     "        while (y % x == 0) {\n",
     "            y /= x;\n",
     "        }\n",
     "        return (y == 1);\n",
     "    }\n",
-    "\n",
-    "    // Method 2\n",
+    "    \n",
+    "    // ---------- Approach 2: Logarithm Method ----------\n",
     "    bool isPowerOfX_Log(int x, int y) {\n",
-    "        if (x == 1) \n",
-    "            return (y == 1);\n",
+    "        // Edge cases\n",
+    "        if (y <= 0) return false;\n",
+    "        if (x == 1) return (y == 1);\n",
+    "        if (x <= 0) return false;\n",
+    "        if (y == 1) return true; // x^0 = 1 for any x > 1\n",
+    "        \n",
     "        double val = log(y) / log(x);\n",
+    "        // Check if val is close to an integer\n",
     "        return fabs(val - round(val)) < 1e-9;\n",
+    "    }\n",
+    "    \n",
+    "    // ---------- Approach 3: Bit Manipulation & Iterative Multiplication ----------\n",
+    "    bool isPowerOfX_BitOptimized(int x, int y) {\n",
+    "        // Edge cases\n",
+    "        if (y <= 0) return false;\n",
+    "        if (x == 1) return (y == 1);\n",
+    "        if (x <= 0) return false;\n",
+    "        if (y == 1) return true; // x^0 = 1 for any x > 1\n",
+    "        \n",
+    "        // Special optimization for x = 2 (bit manipulation)\n",
+    "        if (x == 2) {\n",
+    "            return (y > 0) && ((y & (y - 1)) == 0);\n",
+    "        }\n",
+    "        \n",
+    "        // For other x values, use iterative multiplication\n",
+    "        // This avoids division and potential precision issues\n",
+    "        long long power = 1;\n",
+    "        while (power < y) {\n",
+    "            power *= x;\n",
+    "        }\n",
+    "        return (power == y);\n",
     "    }\n",
     "};"
    ]
@@ -90,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7a574a3c-d3c3-4b4c-ba05-aad284635679",
    "metadata": {},
    "outputs": [
@@ -98,51 +116,186 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=====================================\n",
       "Test case: x = 2, y = 8\n",
-      "Division method: True\n",
-      "Logarithm method: True\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Division):    True | 2^3 = 8\n",
+      "Approach 2 (Logarithm):   True | 2^3 = 8\n",
+      "Approach 3 (Bit/Iter):    True | 2^3 = 8\n",
+      "✓ All approaches agree\n",
+      "\n",
+      "=====================================\n",
       "Test case: x = 3, y = 27\n",
-      "Division method: True\n",
-      "Logarithm method: True\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Division):    True | 3^3 = 27\n",
+      "Approach 2 (Logarithm):   True | 3^3 = 27\n",
+      "Approach 3 (Bit/Iter):    True | 3^3 = 27\n",
+      "✓ All approaches agree\n",
+      "\n",
+      "=====================================\n",
+      "Test case: x = 4, y = 64\n",
+      "=====================================\n",
+      "Approach 1 (Division):    True | 4^3 = 64\n",
+      "Approach 2 (Logarithm):   True | 4^3 = 64\n",
+      "Approach 3 (Bit/Iter):    True | 4^3 = 64\n",
+      "✓ All approaches agree\n",
+      "\n",
+      "=====================================\n",
       "Test case: x = 2, y = 12\n",
-      "Division method: False\n",
-      "Logarithm method: False\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Division):    False\n",
+      "Approach 2 (Logarithm):   False\n",
+      "Approach 3 (Bit/Iter):    False\n",
+      "✓ All approaches agree\n",
+      "\n",
+      "=====================================\n",
       "Test case: x = 5, y = 1\n",
-      "Division method: True\n",
-      "Logarithm method: True\n",
-      "-------------------------\n",
+      "=====================================\n",
+      "Approach 1 (Division):    True | 5^0 = 1\n",
+      "Approach 2 (Logarithm):   True | 5^0 = 1\n",
+      "Approach 3 (Bit/Iter):    True | 5^0 = 1\n",
+      "✓ All approaches agree\n",
+      "\n",
+      "=====================================\n",
       "Test case: x = 1, y = 1\n",
-      "Division method: True\n",
-      "Logarithm method: True\n",
-      "-------------------------\n"
+      "=====================================\n",
+      "Approach 1 (Division):    True | 1^0 = 1\n",
+      "Approach 2 (Logarithm):   True | 1^-2147483648 = 1\n",
+      "Approach 3 (Bit/Iter):    True | 1^0 = 1\n",
+      "✓ All approaches agree\n",
+      "\n",
+      "=====================================\n",
+      "Test case: x = 2, y = 1024\n",
+      "=====================================\n",
+      "Approach 1 (Division):    True | 2^10 = 1024\n",
+      "Approach 2 (Logarithm):   True | 2^10 = 1024\n",
+      "Approach 3 (Bit/Iter):    True | 2^10 = 1024\n",
+      "✓ All approaches agree\n",
+      "\n",
+      "=====================================\n",
+      "Test case: x = 3, y = 81\n",
+      "=====================================\n",
+      "Approach 1 (Division):    True | 3^4 = 81\n",
+      "Approach 2 (Logarithm):   True | 3^4 = 81\n",
+      "Approach 3 (Bit/Iter):    True | 3^4 = 81\n",
+      "✓ All approaches agree\n",
+      "\n",
+      "=====================================\n",
+      "Test case: x = 7, y = 343\n",
+      "=====================================\n",
+      "Approach 1 (Division):    True | 7^3 = 343\n",
+      "Approach 2 (Logarithm):   True | 7^3 = 343\n",
+      "Approach 3 (Bit/Iter):    True | 7^3 = 343\n",
+      "✓ All approaches agree\n",
+      "\n",
+      "=====================================\n",
+      "Test case: x = 6, y = 216\n",
+      "=====================================\n",
+      "Approach 1 (Division):    True | 6^3 = 216\n",
+      "Approach 2 (Logarithm):   True | 6^3 = 216\n",
+      "Approach 3 (Bit/Iter):    True | 6^3 = 216\n",
+      "✓ All approaches agree\n",
+      "\n",
+      "=====================================\n",
+      "Test case: x = 2, y = 100\n",
+      "=====================================\n",
+      "Approach 1 (Division):    False\n",
+      "Approach 2 (Logarithm):   False\n",
+      "Approach 3 (Bit/Iter):    False\n",
+      "✓ All approaches agree\n",
+      "\n",
+      "=====================================\n",
+      "Test case: x = 10, y = 1000\n",
+      "=====================================\n",
+      "Approach 1 (Division):    True | 10^3 = 1000\n",
+      "Approach 2 (Logarithm):   True | 10^3 = 1000\n",
+      "Approach 3 (Bit/Iter):    True | 10^3 = 1000\n",
+      "✓ All approaches agree\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "Solution sol;\n",
     "\n",
-    "    // Test cases (x, y)\n",
-    "    vector<pair<int, int>> testCases = {\n",
-    "        {2, 8},    // true: 2^3 = 8\n",
-    "        {3, 27},   // true: 3^3 = 27\n",
-    "        {2, 12},   // false\n",
-    "        {5, 1},    // false (unless x=1 and y=1)\n",
-    "        {1, 1}     // true\n",
-    "    };\n",
+    "// Test cases (x, y)\n",
+    "vector<pair<int, int>> testCases = {\n",
+    "    {2, 8},      // true: 2^3 = 8\n",
+    "    {3, 27},     // true: 3^3 = 27\n",
+    "    {4, 64},     // true: 4^3 = 64\n",
+    "    {2, 12},     // false\n",
+    "    {5, 1},      // true: 5^0 = 1\n",
+    "    {1, 1},      // true\n",
+    "    {2, 1024},   // true: 2^10 = 1024\n",
+    "    {3, 81},     // true: 3^4 = 81\n",
+    "    {7, 343},    // true: 7^3 = 343\n",
+    "    {6, 216},    // true: 6^3 = 216\n",
+    "    {2, 100},    // false\n",
+    "    {10, 1000}   // true: 10^3 = 1000\n",
+    "};\n",
     "\n",
-    "    for (auto &tc : testCases) {\n",
-    "        int x = tc.first, y = tc.second;\n",
-    "        cout << \"Test case: x = \" << x << \", y = \" << y << endl;\n",
-    "        cout << \"Division method: \" << (sol.isPowerOfX_Division(x, y) ? \"True\" : \"False\") << endl;\n",
-    "        cout << \"Logarithm method: \" << (sol.isPowerOfX_Log(x, y) ? \"True\" : \"False\") << endl;\n",
-    "        cout << \"-------------------------\" << endl;\n",
+    "for (auto &tc : testCases) {\n",
+    "    int x = tc.first, y = tc.second;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    cout << \"Test case: x = \" << x << \", y = \" << y << endl;\n",
+    "    cout << \"=====================================\" << endl;\n",
+    "    \n",
+    "    bool res1 = sol.isPowerOfX_Division(x, y);\n",
+    "    cout << \"Approach 1 (Division):    \" << (res1 ? \"True\" : \"False\");\n",
+    "    if (res1) {\n",
+    "        int k = 0;\n",
+    "        int temp = y;\n",
+    "        while (temp > 1) {\n",
+    "            temp /= x;\n",
+    "            k++;\n",
+    "        }\n",
+    "        cout << \" | \" << x << \"^\" << k << \" = \" << y;\n",
     "    }\n",
-    "\n",
-    "    return 0;"
+    "    cout << endl;\n",
+    "    \n",
+    "    bool res2 = sol.isPowerOfX_Log(x, y);\n",
+    "    cout << \"Approach 2 (Logarithm):   \" << (res2 ? \"True\" : \"False\");\n",
+    "    if (res2) {\n",
+    "        int k = (int)round(log(y) / log(x));\n",
+    "        cout << \" | \" << x << \"^\" << k << \" = \" << y;\n",
+    "    }\n",
+    "    cout << endl;\n",
+    "    \n",
+    "    bool res3 = sol.isPowerOfX_BitOptimized(x, y);\n",
+    "    cout << \"Approach 3 (Bit/Iter):    \" << (res3 ? \"True\" : \"False\");\n",
+    "    if (res3) {\n",
+    "        long long power = 1;\n",
+    "        int k = 0;\n",
+    "        while (power < y) {\n",
+    "            power *= x;\n",
+    "            k++;\n",
+    "        }\n",
+    "        if (power == y) {\n",
+    "            cout << \" | \" << x << \"^\" << k << \" = \" << y;\n",
+    "        } else if (y == 1) {\n",
+    "            cout << \" | \" << x << \"^0 = 1\";\n",
+    "        }\n",
+    "    }\n",
+    "    cout << endl;\n",
+    "    \n",
+    "    // Verify all approaches agree\n",
+    "        if (res1 == res2 && res2 == res3) {\n",
+    "            cout << \"✓ All approaches agree\" << endl;\n",
+    "        } else {\n",
+    "            cout << \"✗ WARNING: Approaches disagree!\" << endl;\n",
+    "        }\n",
+    "        \n",
+    "    cout << endl;\n",
+    "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4398cb71-4afd-4b1c-b80d-fd32767e80c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
